--- a/ok/rm/rm01.md
+++ b/ok/rm/rm01.md
@@ -2,9 +2,9 @@
 
 
 
-## 一、阴阳平衡与失衡
+## 1、阴阳平衡与失衡
 
-### 1、阴阳平衡是世间万物的规律，不只用于中医
+### 1.1、阴阳平衡是世间万物的规律，不只用于中医
 
 阴阳平衡是中国传统的概念，可以用于解释各种事物，不只用于中医。其本质上是指各种事物为了正常的运转，在很多指标上都有其合适的度。让指标保持在合适的范围内，使事物正确的运转，是为平衡。指标超出正常范围，使事物的运转失常，是为失衡。这本是生活中很常见、很简单的道理。
 
@@ -54,7 +54,7 @@
 
 
 
-### 2、阴阳失衡的描述与调节：
+### 1.2、阴阳失衡的描述与调节：
 
 中医用虚、实来描述失衡的原因性质，用补、泻来描述失衡的调节方法。
 
@@ -132,13 +132,13 @@
 
 另外，虚实共存的情况很常见，比如既有阳虚又有实寒而表现出寒证，或者既有阴虚又有实热而表现出热证，再或者阴虚、阳虚、实热、实寒兼有，导致虚实夹杂、寒热混杂的复杂情况。解决这种问题的难度比较大，要分清主次，确定先补还是先泻，或者补泻同用。
 
-### 3、平衡的控制：
+### 1.3、平衡的控制：
 
 在这个例子中，需要有人来对房间的温度进行判断，如果温度高了，需要开放空调，温度低了需要开放暖气，保证房间温度在一个合适的范围之内。现在科技发达，也可以使用传感器侦测温度，用程序进行自动控制。
 
 这个控制的功能对应中医精气神中的神，具体在后面的章节会介绍。
 
-### 4、平衡的机制：
+### 1.4、平衡的机制：
 
 为了让房间的温度均衡，要制造空气的流动，让暖气产生的热气流向冷的一面，空调产生的冷气流向热的一面，这就是房间寒热平衡的机制，也叫阴阳的交互。
 
@@ -162,7 +162,7 @@
 >
 > 《黄帝内经讲解-阴阳对立统一的例证》
 
-### 5、多方面的平衡：
+### 1.5、多方面的平衡：
 
 前面这个例子，重点谈的是温度平衡，其实一个房间实现卧室的功能，还有很多其他指标需要平衡。比如湿度、墙壁隔热度、采光度、地面光滑度等等。
 
@@ -176,7 +176,7 @@
 
 这里提到的多方面平衡，对于人也一样，温度平衡是人体平衡的一个重要方面，但是还有其他方面的平衡，比如身体有气的平衡、血的平衡、水的平衡，对应就有气虚、气滞、血虚、血淤、津液虚、痰饮等各方面的失衡，这些要等后面介绍完人体的运转机理后才能解释。
 
-### 6、平衡要素：
+### 1.6、平衡要素：
 
 综上所述，我们可以总结出平衡的几个要素
 
@@ -210,7 +210,7 @@
 
 所以在这里，只要谈阴阳，一定要先说功能是什么、平衡点是什么。也就是没有功能不谈平衡，没有平衡不谈阴阳。若确有说不清楚的地方，存疑待考，而不能囫囵吞枣，敷衍而过。
 
-### 7、中西医的指标差异
+### 1.7、中西医的指标差异
 
 通过上面的叙述，我们知道中医的阴阳平衡、寒热虚实和西医的指标平衡是一个意思，只是描述术语上的差别，解释清楚中医的指标概念后，这种差异就不存在了。西医的高血压要降压、高血糖要降糖也是调节某些指标平衡。
 
@@ -220,13 +220,13 @@
 
 
 
-## 二、阴阳平衡的高级内容
+## 2、阴阳平衡的高级内容
 
 
 
 前面所述是对平衡的一些简单理解，下面我们要对平衡过程做一点深入分析，为下面学习天地自然打一点基础。
 
-### 1、大平衡下的小平衡
+### 1.1、大平衡下的小平衡
 
 当我们定下一个系统的平衡目标后，为了完成这个目标，相关的各个方面都有各自的任务。为了完成各自的任务，其又有各自的平衡点。这些方面的平衡点可以理解为大平衡下的小平衡。
 
@@ -254,7 +254,7 @@
 
 
 
-### 2、阴阳的进一步划分
+### 2.2、阴阳的进一步划分
 
 阴阳可以根据阴阳比例进行多种形式的划分，并不局限于二分法。这里演示一下四分法和六分法。
 
@@ -274,7 +274,7 @@
 
 
 
-## 三：取类比象
+## 3、取类比象
 
 依然以房间温度平衡的例子来说明。温度高于平衡点的事物属阳，比如暖气、火等，低于平衡点的事物属阴，比如空调、冰等。那么暖气和火就属于同类，空调和冰就属于同类，或者说针对当前平衡点，它们具有类似的象。
 
@@ -288,9 +288,9 @@
 
 
 
-## 四、一些扩展内容
+## 4、一些扩展内容
 
-#### 平衡的有效区域：
+#### 4.1平衡的有效区域：
 
 我们说房间在空调、暖气的作用下达到20-30度的均衡温度。这是大概情况，严格来讲，房间中临近空调和暖气的地方，温度是超出这个范围的。空调的制冷温度在15度左右，暖气在80度左右。这两者附近的温度是超出范围的，所以我们不会居住在这两者附近。
 
@@ -300,9 +300,7 @@
 
 明确这一点是为了下面更好的理解中医对自然界气交之地的叙述。
 
-
-
-#### 物极必反：
+#### 4.2物极必反：
 
 物极必反的前提是平衡，在大体平衡的基础上，升到一定程度，必须降，降到一定程度必须升。否则维持不了平衡。	
 
