--- a/ok/rm/rm04.md
+++ b/ok/rm/rm04.md
@@ -1,239 +1,143 @@
-# 第四章 判断人体失衡情况
+# 第四章 人体运行框架
 
-前面介绍了中医理论下人体的重要指标：精、元气、神、气、血、津液、形。下面要探讨如何判断这些指标的失衡状态，以及如何调节这些指标的平衡。
+### 1、运行框架
 
-中医的核心在于辨证论治。
+通过第三章的学习，我们应该建立起一个人体运行的基本框架。
 
-**证**就是上述指标出现失衡的性质、部位和程度。比如精的失衡常见为精虚。血的失衡常见为血虚、血淤、血热。气的失衡可以有气虚、气滞、气郁等。具体到部位的话，可以有肝血虚、肾气虚等。如果按照三阴三阳划分部位的话，可以有太阳寒实，阳明热实等等。
+1、功能与形体：人体的主要功能是运动、思维、感受与表达。功能正常需要头、四肢、脏腑、皮肉筋骨等形质器官能正常工作。
 
-**辨证**就是如何分辨证的类型的问题。对证进行量化测量是很困难的事情，现在的仪器设备还难以达到中医的要求。所以目前主要还是采用传统的司外揣内方法。中医认为有其内必有其外，内在气血能量的状态必然有外在的体现。一旦掌握了内在状态与外在表现的关系，我们就可以通过外在表现判断出内在状态，这就是中医四诊望、闻、问、切的道理。
+2、形体与气血：形体器官能正常工作需要其处在一个适宜的人体内部环境中。适宜的人体内部环境由气血维持，因此气血为形体之本。
 
-人体的眼、面、脉搏等部位就像汽车的故障指示灯一样，能够表示出内在指标的各种问题。为了防止单一的指示灯故障，所以我们需要尽量多的收集各种指示灯提示的信息，进行综合判断。如果多个指示灯都指明是同一故障，才能比较准确的确定故障位置和性质，这就是为什么要四诊合参。
-
-有时还会出现不同的指示灯表达了相反的故障信息，这时要根据经验判断哪个指示灯表示的问题更准确，需要进行取舍，并在后继的调理过程中进行观察，判断取舍是否正确。这就是“舍脉从证”或者“舍证从脉”。
-
-**论治**则是在准确辨证的基础上，确定调节平衡的方案，实则泻，虚则补。如果多部位出现多指标的失衡，则根据轻重缓急确定调节的先后顺序。
-
-中医判断人的健康状态，首先要判断精、气、神。神为身体的管理者，气为身体的能量。两者有一个出问题，都易造成久病；两者同时出问题，则是危重病的标志。至于精，如果先天之精耗尽，则人正常寿命终了。
-
-判断神主要观察目的状态，判断气要注意观察面部的颜色与光泽，具体在下面详细说明
-
-> **色生于脏，各命其部。神藏于心，外候在目。**
+> **形与气相任则寿，不相任则夭（l)。皮与肉相果则寿，不相果则夭（2）。血气经络胜形则寿，不胜形则夭（3）。**...
 >
-> **光晦神短，了了神足，单失久病，双失即故。**
+> **气血**等基本物质，经络等脏腑组织的功能，是**人体的根本**，而人体的躯壳好象树木的枝叶。如果气血的强盛胜过形骸，是人体生命力旺盛的表现，就长寿。反之，如果不能胜过形骸，就夭亡。
 >
-> 《诊法口诀浅释》
+> 《黄帝内经讲解-寿夭与先后天的关系》
 
-#### 1、判断神的状态：
+中医讨论的疾病大部分在这个环节，即气血充养形体、脏腑过程中遇到的问题。以后在学习《伤寒论》、《金匮要略》、《温病条辨》的时候会探讨人体各个部位（皮肉筋骨脉、头项胸腹肩背腰、四肢关节、脏腑经络）的正（元气、宗气、营卫气、津、血）虚和邪（风热暑湿燥寒、痰饮、淤血）实问题。了解这些问题的外在表现，及如何判断与治疗。
 
-神藏于心，外候在目。
+3、气血与精：
 
-判断神的状态主要看两眼。眼光明亮、眼神灵活、目中润泽，目睛清莹，了了分明，此为神气充足。若是两目呆滞、目光晦暗、蒙混不清，是神气不足的表现。瞳仁散大，为肾精不足或将竭；瞳仁固定，为精绝神亡。
+人体气血来自脏腑之精气。后天之精配合先天之精，共同转化产生气血，再通过经络、血脉、三焦传输到全身供形体使用。前述气血为形体之本，而精则为气血之本。气血为精所化，精亡则人亡。
 
-其次看神志是否清楚、反应是否灵活、说话是否有条理、发音是否清亮等等。
+后天之精主要来自脾胃，因此人无胃气则亡。先天之精主要存于肾，若耗尽，人亦亡。因此脾胃被称为后天之本，肾被称为先天之本。
 
-另外，注意是否是假神的情况。假神是指久病而重危的病人，突然精神转佳，言语不休，索饮索食，呼吸平匀，如同常人，这种假象，称为假神。假神往往是回光返照，很可能短时间即告死亡。
-
-若神气充足，则人很少生病，生病也容易痊愈。反之，神气不足，则易病难愈，且容易得大病。
-
-#### 2、判断气的状态
-
-中医以调气为主，所以中医判断气的内容也是最多的。这里简单介绍：面色、脉象、舌像、尺肤等几种方法的大概原则，算是索引，具体还是要参考教材诊断的内容。
-
-> **夫色脉与尺之相应也，如桴鼓影响之相应也，不得相失也，此亦本末根叶之出候也，故根死则叶枯矣⑴。色脉形肉不得相失也，故知一则为工，知二则为神，知三则神且明矣（2）。**
+> **脾脉者土也，孤藏以灌四傍者也。**
 >
-> 《灵枢•邪气脏腑病形》
+> 《素问•玉机真藏论》
 
-##### 1、面色
-
-面色包括面部的颜色和光泽。一般来说面色光泽明润，为身体能量充足的表现，即使得病，问题也不大。
-
-> 张三钖说：“五脏六腑之精华，上彰于明堂，...但当求其有神，虽困无害，神者色中光泽明亮是也，脉有胃气，同一理也。”
-
-为什么面部的色泽能反应人体能量的状态呢？因为人体脏腑及各大主要部位的能量都是通过经络联系在一起的，而全身的经络都与面部相联。所以人的面部就像汽车的指示灯一样，能够反应内在各个部位的健康状态与故障。
-
-> 十二经脉，三百六十五络，其血气皆上注于面而走空窍”
+> **食气入胃，散精于肝，淫气于筋（1）。**
 >
-> 《灵枢•邪气脏腑病形》
-
-具体面部不同的部位与脏腑的关系，内容也比较多。《概论-诊法》不太详细，应该参看国医大师孙光荣主编的《口诀浅释》的望诊部分。
-
-> 两眉之间，名为印堂，又称阙中，在面部中间的最高之处，是相关肺病的部位；印堂的上面，名为阙上，阙上到头发边缘，名为天庭，天庭处在整个面部最高最上的地方，是相关头面疾病的部位；阙上处在天庭和印堂之中，所以是相关头面及咽喉疾病的部位，印堂略向下，在两眼之间，名为山根，又称下极，是相关心病的部位......
+> **食气入胃，浊气归心，淫精于脉，脉气流经，经气归于肺，肺朝百脉，输精于皮毛（2）。**
 >
-> [《口诀浅释》](https://www.gmzy.org.cn/read/qs/qs01.md#_2)
-
-##### 2、脉象
-
-诊脉是通过人体一些部位的动脉跳动形态变化来判断人体内能量状态的方法。为什么动脉跳动的情况能够反应人体能量状态？因为前面说过，人的血液在血管中流动，是在气的帮助下进行的。气足则血液流动通畅，气不足则血流瘀滞。
-
-> 十二经脉循行部位上均有搏动应手之处。因此，可以在每一经的动脉处，测候该条经脉所络属脏腑的功能活动。例如，中部天，手太阴太渊穴，即寸口脉处,可诊候肺。中部人，手少阴神门穴处，可诊候心。下部天，足厥阴五里穴处，可诊候肝，女子取太冲穴。下部地，足少阴太溪穴处，可诊候肾。下部人，足太阴箕门穴处，可诊候脾，趺阳脉冲阳穴处可诊候胃。临证可在上述部位，测候所主脏腑精气的盛衰。
-
-为了简便，现在普遍采用诊手腕肺经太渊穴的脉搏来诊断全身，即寸口脉。因为“脉气始于胃，输于脾、但百脉朝会于肺，需赖肺气的推动才能灌注于五脏六腑”，所以各脏腑病变在寸口脉上都有体现。
-
-关于寸口脉的细节，内容也比较多，[《概论-切诊》](https://www.gmzy.org.cn/read/gl/gl05-0.4.0.0.0.md)、[《口诀浅释-切诊》](https://www.gmzy.org.cn/read/qs/qs01.md#_6)[《伤寒论讲解-辨脉法》](https://www.gmzy.org.cn/read/shl/shl01.01-1.2.0.0.0.md)讲的比较详细，大家可以参考。
-
-##### 3、尺肤
-
-尺肤是指由腕至肘部的皮肤。内经认为诊察尺肤的紧急或弛缓，高起或瘦削，滑润或涩滞等状况，以及肌肉的坚实或脆弱，可以帮助诊断疾病
-
-> **尺肤滑，其淖泽者，风也（1）。尺肉弱者，解亦，安卧脱肉者，寒热不治(2)；尺肤滑而泽脂者，风也；尺肤涩者，风痹也(3)；尺肤粗如枯鱼之鳞者，水泱泆饮也（4）。尺肤热甚，脉盛躁者，病温也，其脉盛而滑者，病且出也(5)。尺肤寒，其脉小者，泄，少气（6）。尺肤炬然，先热后寒者，寒热也。尺肤先寒，久大之而热者，亦寒热也（7）。**
+> **毛脉合精，行气于府，府精神明，留于四藏，气归于权衡(3),权衡以平，气口成寸，以决死生(4）**
 >
-> 《灵枢•论疾诊尺》
+> 《素问•经脉别论》
+
+> **胃者，五藏六腑之海也，水谷皆入于胃，五藏六腑皆禀气于胃（1）。五味各走其所喜，谷味酸，先走肝；谷味苦，先走心；谷味甘，先走脾；谷味辛，先走肺；谷味咸，先走肾（2）。**
 >
-> 尺部肌肉松软柔弱，是阴阳两虚的表现。阴精不足，则肌肉失养，阳气不足，则肌肉不用。所以不但肌肉松软柔弱，而且身体困倦，四肢懈怠。
+> 《灵枢·五味》
+
+4、外界资源的吸收
+
+人体的形、气血与五脏所藏的后天之精皆来自对自然界天气、地气的吸收，所以呼吸与饮食都很重要。
+
+> **天食人以五气，地食人以五味(1)。五气入鼻，藏于心肺，上使五色修明，音声能彰(2)。五味入口，藏于肠胃，味有所藏，以养五气(3)，气和而生，津液相成，神乃自生(4)。**
 >
-> 如果阴阳受损严重，阳气虚亏，则昏沉嗜睡，阴寒内生而畏寒；阴精虚亏，肌肉失养，则肌肉瘦削如失，虚阳上亢则发热，病情凶险：不易治疗。
+> 《素问•六节藏象论》
 
-详见[《黄帝内经讲解-诊法学说-诊尺肤》](https://www.gmzy.org.cn/read/hdnjs/hdnj08-0.2.16.0.0.md)
+普通人都知道饮食、呼吸重要，但是难以意识到脾胃吸收能力的区别，所以中医重点提示这一点。
 
-##### 小结
-
-现在尺肤诊法已经很少使用了，所以资料不多。脉诊和色诊还比较常用。除此之外，舌诊也是常用的比较方面的诊断方法，可以参考《概论》望诊内容。
-
-脉诊与色诊有一个区别在于脉象更能体现当前的身体能量状态，而面色更能体现较长时间的身体状态。比如一个年轻健康的人初得病的时候，一般不易发生面色的变化，而脉象上往往有体现。而老年久病之人，面色不好，经过调理后，可能脉象很快能见到好转，但是面色的好转要经过一个相对长的时间。
-
-> 面部色泽变化是五脏精气盛衰的具体表现，一般情况下新病不易引起色泽的变化。所以如果面色失于荣润，都是病久伤及五脏精气的表现，所以为久病。所谓“脉不夺”，是相对“色夺”而言的，意谓久病面部色泽的异常变化较脉象的异常变化更为明显，所以不能理解为久病没有脉象的异常变化。
+> 地之五味由口摄入，贮藏于肠胃，经过脾胃的消化转输，水谷精微得以充养五脏之气。故在一般情况下，食欲旺的人，五脏精气相应充足；食欲差的人，五脏精气相应衰少。《灵枢•五味》说：“谷不入，半日则气衰，一日则气少”。说明五脏之气的盛衰，与摄取饮食的多少有密切的关系。
 >
-> 《黄帝内经讲解- 色脉互参》
+> 《黄帝内经讲解-人类生存的自然条件》
 
-诊断总的原则是，无论望色、切脉还是舌诊，我们都需要先知道正常人的情况是如何的，比如正常的面色是怎样的？正常的脉象是怎样的？正常的舌像是怎样的？然后才能知常达变，通过病人面色、脉象和舌像与正常情况的区别，来分析人体气血失衡的虚实，并施以补泻的调理方案。然后再根据调理后面色、脉象、舌像的变化，来确定调理方向是否正确。如此反复，最终将脉象、舌像调理到正常为止。
+人一日三餐，饮食留于肠胃。胃空虚的时候，水谷在肠。肠空虚的时候，又有水谷补充到胃。肠与胃交替保存着水谷，保证人一直有地气可以吸收。若肠胃都空虚，人无地气补充，就快要死亡了。由此可见，人体吸收后天之精，补充五脏精气，是持续性的，不能中断。肠胃主要功能是消化、存储水谷，而水谷精华的吸收过程是由脾来完成的，在肠胃补充水谷充足的情况下，脾的吸收能力就成为关键因素。现代社会疾病，因脾功能弱，对水谷的吸收不充分，造成五脏精气不足，进而造成的疾病的情况非常普遍。
 
-#### 3、判断精的状态
+> 肠胃之长，凡五丈八尺四寸，受水谷九斗二升一合合之大半，此肠胃所受水谷之数也。平人则不然，**胃满则肠虚，肠满则胃虚，更虚更满，故气得上下，五脏安定，血脉和利，精神乃居，故神者，水谷之精气也**。故肠胃之中，当留谷二斗，水一斗五升；故平人日再后，后二升半，一日中五升，七日五七三斗五升，而留水谷尽矣；故平人不食饮七日而死者，水谷精气津液皆尽故也。
+>
+> 《灵枢-平人绝谷第三十二》
 
-前面关于精的章节介绍过判断方法，比如通过齿、发、骨、人中以及面部形态来判断精的多少。
+5、神与其它：
 
-齿为骨之余，肾主骨，精生髓。所以精开始不足的时候，先从牙齿上体现出来，松动掉落。进一步不足的时候，从骨骼上体现出来，老年人弯腰驼背、容易骨折。到比较严重的时候出现大骨枯槁，出现肩垂，项倾，腰折，膝败，脊骨突起的现象，这就表明肾精已经衰弱到相当严重，预后不良。
+神总管以上全部过程，无论是高级的思维情绪还是低级的人体本能，所有平衡过程都由神来控制。若神的控制能力强，则即便精、气、血、形的数量稍少，也能配合的很好。反之，如果神的控制能力弱，则即便其它要素较多，也可能出现分配不合理的情况。
+
+> “得神者昌，失神者亡”
+>
+> 《素问·移精变气论》
+
+神与气血等要素共荣互损。从共荣角度看，神足可以合理的调配气血；气血足则可以养神。从互损角度看，如果神异常，则逆乱损耗气血；而气血失衡则神无所养，可导致神的异常。
+
+神的异常往往表现为精神类疾病，轻则失眠、多梦、烦躁不安，重则抑郁、癫狂、健忘、神昏。因此，治疗这类疾病应从形神两方面着手。一方面是心理疏导，安抚其思维情绪；另一方面则是调理气血失衡之处，健壮形体。
+
+> 中医学形神合一理论，在认为形体对精神起决定作用的同时，强调精神意识也对形体的健康发生着重要的影响。所以志意调和，不但能使思想集中，精神专一，魂魄不致散漫无常，懊悔愤怒等异常情绪也无从产生。而且还使五脏的功能，不至因为精神情志的变化，而引起气运失常，从而使五脏功能正常，正气健旺，不会受邪气的干扰而生病。
+>
+> 《黄帝内经讲解-血气精神的重要作用》
 
 
 
-#### 4、判断严重情况
+6、脏腑功能中，因五脏对几大要素的作用最大，比如五脏藏神、心主血脉、肾藏精、肝藏血、肺主气等等，所以五脏功能最为关键。若五脏失衡，对人体要素的产生、体内环境的形成影响最大，内经说治五藏者半生半死。
 
-望闻问切诊断的内容是比较多的，大家慢慢学习。这里先整理一些健康出现严重问题的情况，万一遇到这类问题，要做到心里有数。
+> **邪风之至，疾如风雨，故善治者治皮毛，其次治肌肤，其次治筋脉，其次治六府，其次治五藏,治五藏者，半死半生也。**
+>
+> 《素问•阴阳应象大论》
 
-> 若久病之人，本不能食，但突然反而暴食，这是中焦脾胃之气将绝的征象，称为“除中”，也是“回光返照”的一种表现。...
->
-> 亡阴亡阳之脱汗，又称绝汗，常表现为大汗淋漓、汗出如珠，或汗出如油等，为阴阳离决之危证，多属难救。...
->
-> 根据五行学说，面部之五色与五脏相生者为顺，与五脏者相克者为逆。如肾病面见黄色为土克水，为病难愈；若见青色，为水生木，为病易治。肺病，面见黑色者，金生水，主病易愈；若见红赤，火克金，为病难愈。...
->
-> 瞳仁散大，为肾精不足或将竭；瞳仁固定，为精绝神亡。...
->
-> 鼻翼煽动，伴有高热者，多为外感之肺热壅盛，亦见于肺肾精气衰竭而出现之喘息。...
->
-> 人中满，唇翻，是脾阳绝；人中短缩，是脾阴绝...
->
-> 久病重病，处于衰竭状态的病人，若见呃逆，多为病情危笃难愈之征...
->
-> （小儿）疾病时指纹未出风关者，病势轻浅；指纹透至气关者，为病势深入，病情加重；指纹达于命关者，病势深重；指纹延伸至指甲端者，称透关射甲，病情多危笃难治。...
->
-> 《中医药学概论》
+腑起到辅助作用，除了吸收饮食精微外，还要接收脏在工作中产生的浊气废物，将之排出体外。
 
-> **黑庭①赤颧，出如拇指，病虽小愈，亦必卒死；唇面黑青，五官黑起，擦残汗粉②，白色皆死。**
+> 夫胃、大肠、小肠、三焦、膀胱，此五者天气之所生也，其气象天，故泻而不藏。**此受五藏浊气**，名曰传化之府，此不能久留，输泻者也。
 >
-> 注：
->
-> ①庭：指天庭。
->
-> ②擦残汗粉：五官忽然出现黑中夹白，好像擦汗时将残粉揩去后的面色，黑白明显的样子。...
->
-> **善色不病，于义诚当①；恶色不病，必主凶殃。五官陷弱，庭阙不张②，蕃蔽卑小③，不病神强④。**...
->
-> **阳绝戴眼②，阴脱目盲，气脱眶陷，睛定神亡。**
->
-> ②戴眼：指病人眼睛上视，不能转动。...
->
-> **言微难复，夺气可知。俨妄无伦①，神明已失。**...
->
-> 阳证出现阴脉则病危。...
->
-> **心绝之脉，如操带钩，转豆①躁疾，一日可忧。**
->
-> 注：
->
-> ①转豆，脉来象一连串豆子，颗颗累累的感觉。
->
-> 本段是讲心绝脉。
->
-> **肝绝之脉，循刀责责①，新张弓弦，死在八日。**
->
-> 注：
->
-> ①循刀责责：如按在刀刃上，细硬毫无从容、生气。
->
-> 本段是讲肝绝脉。
->
-> **脾绝雀啄①，又同屋漏，复杯水流，四日无救。**
->
-> 注：
->
-> ①啄：Zhuo，音镯。鸟吃东西叫啄。雀啄，鸟雀啄食状。
->
-> 本段是讲脾绝脉，
->
-> **肺绝维何？如风吹毛，毛羽中肤①，三曰而号。**
->
-> 注：
->
-> ①毛羽中肤：形容鸟的羽毛碰到人的皮肤那样，轻浮无根。
->
-> 本段是讲肺绝脉。
->
-> **肾绝伊何？发如夺索①，辟辟弹石②，四曰而作。**
->
-> 注：
->
-> ①夺索，按脉好像摸在长而散乱无序的绳索上。
->
-> ②弹石：如摸在弹石上很硬很沉。
->
-> 本段是讲肾绝脉。
->
-> **命脉将绝，鱼翔①虾游②。至如涌泉，莫可挽留。**
->
-> 注：
->
-> ①鱼翔：是怪脉的一种，如同鱼在水中游翔的状态。
->
-> ②虾游：也是怪脉之一，好像虾游一样，静而不动，忽而一跃即去。
->
-> 本段是讲鱼翔、虾游等败脉。
->
-> 《口诀浅释》
+> 《素问•五藏别论篇第十一》
+
+总的来说，脏腑产生气血以养形体。若是细化的话，则五脏又各自侧重营养不同组织。肾主骨生髓，肾精不足，则骨质疏松，骨髓亏损。其它心主血脉、肺主皮毛、脾主肉、肝主筋皆为同理。
+
+光明教材对中医整体观的介绍就是人体是一个以五脏为中心，并通过经络系统，把六腑、九窍、四肢百骸等全身组织器官联系成有机的整体。也因此，五脏代表的人体地气五行的平衡至关重要。五行学说与阴阳学说并重，作为《中医药学概论》第一章的内容，是中医学的最基础内容。
 
 
 
-> **头者，精明之府（2），头倾视深，精神将夺矣（3）。背者，胸中之府，背曲肩随，府将坏矣（4）。腰者，肾之府，转摇不能，肾将惫矣（5）。膝者，筋之府，屈伸不能，行则偻附，筋将惫矣（6）。骨者，髓之府，不能久立，行则振掉，骨将惫矣（7）**...
+### 2、几大指标失衡的常见情况
+
+|      | 精     | 神       | 元气 | 天气                          | 血            | 津液   | 形         |
+| ---- | ------ | -------- | ---- | ----------------------------- | ------------- | ------ | ---------- |
+| 正虚 | 精不足 | 神不足   | 阳虚 | 气虚                          | 血虚          | 津液虚 | 肉槁、骨陷 |
+| 邪实 | 精浊   | 七情太过 | 阳亢 | 六淫太过、气郁、气滞、气逆... | 血淤、血热... | 痰饮   | 瘿、瘤...  |
+
+人体的脏、腑、皮、肉、筋、骨全身各处，都需要这几大要素的平衡，也都有可能出现各自的失衡。比如肝可以有精的虚实、神的虚实、元气的虚实、天气的虚实、血的虚实等等，肺、心、脾、肾也是如此，皮、肉、筋、骨也是如此。这就是中医的证。辨证论治就是要分辨出哪些部位分别有哪种失衡，进而进行对证治疗。
+
+教材《概论》的辨证章节，只是列出了一些常见的情况，比如肝只列出了肝气郁结、肝火上炎、肝火上亢、肝风内动、 肝胆湿热、寒滞肝脉等几种情况，这些应只是常见情况，并非全部，其它也是类似。
+
+从指标角度看，几大指标可以单个失衡也可以组合失衡，阳虚就是单指阳气这指标失衡，痰热就是两个指标失衡，分别为痰和热。比如伤寒论的小陷胸汤证，是心下部位的痰热互结，属于在一个部位（心下）上有两个指标（痰、热）失衡。从部位角度看，也可以有多个部位同时失衡。比如大青龙汤证，是内热外寒，属于内有热、外有寒两个部位的组合失衡。小青龙汤则是外寒内饮，也是两个部位的失衡，分别是外有寒和内有饮。
+
+> 小结胸病，属**痰热互结**，法当清热开结涤痰，用小陷胸汤治疗。本方由黄连、半夏、栝蒌实组成。黄连苦寒，苦降下，寒胜热，为清泄**心下**热结最得力的药物；半夏辛温滑利，开结气，化痰蠲饮；栝蒌实甘寒滑利，有润便化痰之功，配黄连以清热，协半夏以蠲饮。三药合用，痰热各自分消，则无结滞之患。
 >
-> **大骨枯槁（1），大肉陷下（2），胸中气满，腹内痛（3），心中不便，肩项身热（4），破䐃脱肉，目眶陷（5），真藏见，目不见人，立死（6）。**
+> 《伤寒论讲解-138条》
+
+> 寒邪闭表而不能入里，阳气内郁而不能外泄，从而形成**表寒内热**之证。此时用麻黄汤则无清里之效，用白虎汤则证未见烦渴引饮，尤其是寒邪在表，则易冰伏其邪。故治用*大青龙汤*，峻汗以解表闭，清里以除烦躁，为表里两解之法。
 >
-> 《素问•玉机真脏论》...
+> 《伤寒论讲解-38条》
+
+> 小青龙汤主之：证为外寒内饮，故用小青龙汤外散风寒，内消水饮，以达到表里两治的目的。
 >
-> **面青目赤，面赤目白，面青目黑，面黑目白，面赤目青，皆死也（2）。...**
+> 《伤寒论讲解-40条》
+
+各种失衡都有其外在特殊表现，在以后的学习中要能仔细捕捉这类表现。比如大青龙汤证的特异表现为“不汗出而烦躁”;小陷胸汤证为“心下部位按之痛，脉浮滑”。小青龙汤则为“遇寒而咳，咳吐白痰、舌苔水滑、脉弦”等等。
+
+> 辨桂枝证重在汗出；辨麻黄证重在无汗；辨大青龙证重在**不汗出而烦躁**，如此则临证方有所本。
 >
-> 口唇外翻是肌肉衰萎，足太阴脾气竭绝的征象...
+> 《伤寒论讲解-38条》
+
+> 小结胸病，正在**心下，按之则痛(1)，脉浮滑(2)**者，小陷胸汤主之(3)。[138]
 >
-> 虚里脉搏动停止不至，是宗气亏竭的表现。而宗气赖脾胃后天水谷精气化生，宗气亏竭又是胃气生化之源内绝的结果，所以主死。...
+> 《伤寒论讲解-138条》
+
+> 小青龙汤.....寒饮射肺之咳喘，多在寒冷季节发作，常**咳吐大量白色泡沫样痰**，且落盂成水，或咳嗽吐白色半透明胶粘之**冷痰**，宛似蛋清。寒饮郁遏阳气，若见面色青暗或黧黑，则谓之“水色”：寒饮阻滞营卫气血，若致面部出现块块色斑，则谓之“**水斑**”；水饮上泛，若致使面部庞浮或眼睑轻肿，则谓之“水气”。水气、水斑、水色，以及舌苔水滑、脉弦等，皆为辨寒饮内盛之依据。
 >
-> 虚里穴搏动过甚，内动与衣俱振动，是宗气外泄，胃气将尽的具体表现。...
->
-> 《黄帝内经讲解》
+> 《伤寒论讲解-40条》
+
+此外中医的部位划分也是一个重要内容，是一个特色内容，详细的部位划分放在后面的章节介绍。
 
 
 
-#### 5、总结
+## 题目
 
-精、气、神、血、水、形这几个方面都很重要。中医主要以调气为主，兼顾其他方面。
-
-中医对于神和先天之精的调节能力有限，因此需要先要评估一下精和神。如果两者任何一个缺失过多，都预后不好。如果精、神尚可，也没有大量失血、大汗失水以及剧烈外伤造成形体严重受损等特殊情况，则大部分疾病是以气为核心的，具体就是围绕着气是否充足、分配是否均匀、运转是否通畅的问题。即便使用安神、活血化瘀、祛湿痰等方法，目的还是让气更充足、更通畅，进而带动血、津液的充足与通畅。
-
-前面的内容是对教材在基础概念上的一个补充，对于大家在学习中难以理解的问题做一些浅显的阐述。大家在掌握中医的总体思路后，落实到具体问题的时候，应该详细学习教材。光明中医教材的内容是非常精华的，是老一代中医毕生经验的无私总结。
-
-诊断方面，《概论》的四诊章节、《口诀》的四诊、《内经》的诊法、《伤寒论》的脉法，都很值得参考。
-
-具体病种方面，《内》、《外》、《妇》、《儿》、《眼》、《喉》对各病种的辨证经验非常有价值。
-
-用药方面，《本草》、《方剂》也值得参考。
-
-总之，大家对人体运转机制比较清晰后，对精、气、神、血、水、形几个方面的平衡与失衡有了深刻的理解，再参阅各种资料，可达到事半功倍的效果，对于辨证可以做到得心应手。
-
-针砭灸药属于技术范畴，只要辨证准确，对失衡的部位、性质、程度做到心里有数，具体的治疗手段可以随意选取，目的就是恢复平衡。
+1. 气血为----之本，而----则为气血之本
+2. 小陷胸汤证属于在一个部位上有两个指标失衡，一个部位是指----部位，两个指标分别是----、热。大青龙汤证则是两个部位的失衡，为-----有热，外有----。
