--- a/ok/rm/rm03-0.5.0.0.0.md
+++ b/ok/rm/rm03-0.5.0.0.0.md
@@ -182,7 +182,7 @@
 
 #### 气的调节：
 
-全身气的升降出入活动是在肝的调节下进行，肝主疏泄即为此意。若肝的疏泄功能失常，则可能出现气的上逆，产生头目胀痛，面红目赤，心烦易怒的现象；或者气的运转产生淤滞，进而影响血和津液的运行，产生气滞血瘀痰饮的现象，妇女可以产生惊醒不畅、痛经等现象。肝的疏泄功能也管理脾胃的气机升降，若出现异常，对于脾可能出现腹胀、肠鸣、泄泻等脾气不升的症状，对于胃可能出现胃脘作痛，嗳气不舒，恶心呕吐的胃气不降的症状。
+全身气的升降出入活动是在肝的调节下进行，肝主疏泄即为此意。若肝的疏泄功能失常，则可能出现气的上逆，产生头目胀痛，面红目赤，心烦易怒的现象；或者气的运转产生淤滞，进而影响血和津液的运行，产生气滞血瘀痰饮的现象，妇女可以产生经行不畅、痛经等现象。肝的疏泄功能也管理脾胃的气机升降，若出现异常，对于脾可能出现腹胀、肠鸣、泄泻等脾气不升的症状，对于胃可能出现胃脘作痛，嗳气不舒，恶心呕吐的胃气不降的症状。
 
 > 一是调畅气机。气机，即气的升降出入运动，它是对脏腑功能活动形式的基本概括。由于肝具有主动、主升的功能特点，这对气机的疏通、畅达、升发，是一个重要的因素。肝的疏泄功能正常与否，直接影响着气机的调畅。如果肝的疏泄功能正常，则气机通畅，气血和调，经脉通利，各个脏腑的功能活动就正常。如果肝的疏泄功能异常，或由于肝的疏泄功能减退，而形成气机不畅、肝气郁结的病理变化，出现胸胁胀痛的病症。或由于肝的升发太过而形成肝气上逆，或肝阳上亢的病理变化，而出现头目胀痛，面红目赤，心烦易怒等病理现象。由于气的升降出入运动，直接影响到血与津液的输布与运行，故肝的疏泄功能异常，常会导致血与津液的病变。如肝气郁结，可形成血瘀、癓瘕，在妇女可导致经行不畅、痛经等症。同样，肝郁气滞，亦可产生痰、水等病理产物，出现痰核、臌胀等症状。
 >
