--- a/ok/rm/rm05.md
+++ b/ok/rm/rm05.md
@@ -64,7 +64,7 @@
 
 ##### 3.1、脉象与气血的关系
 
-脉的本质血液在脉管中的波动情况。血液运行的初始动力是心气，过程又需要宗气的辅助。因此脉象能够体现人体气血的分配以及气血之间的平衡情况。正常的脉象三部九侯都有脉，代表全身内外都有气血在起作用。当各部位气血有波动的时候，在脉象上有对应的变化。比如夏天的时候，气血分布于机体表层多一些，则脉象偏浮一点，轻按的时候脉比较明显，重按稍弱；冬天气血在脏腑多一点，则脉象偏沉一点，轻取稍弱，重按明显。
+脉的本质是血液在脉管中的波动情况。血液运行的初始动力是心气，过程又需要宗气的辅助。因此脉象能够体现人体气血的分配以及气血之间的平衡情况。正常的脉象三部九侯都有脉，代表全身内外都有气血在起作用。当各部位气血有波动的时候，在脉象上有对应的变化。比如夏天的时候，气血分布于机体表层多一些，则脉象偏浮一点，轻按的时候脉比较明显，重按稍弱；冬天气血在脏腑多一点，则脉象偏沉一点，轻取稍弱，重按明显。
 
 > 正常脉象，又称平脉、常脉。平脉的至数是一息（一呼一吸）脉来四至，脉象和缓有力均匀，**寸、关、尺三部和浮、中、沉九候均有脉**。
 >
