--- a/ok/bc/bc10-0.0.5.0.0.md
+++ b/ok/bc/bc10-0.0.5.0.0.md
@@ -6,7 +6,7 @@
 
 **钩藤有清肝息风、平肝止痉之效**。为茜草科常绿木质藤本植物钩藤及其同属多种植物的带钩茎枝。故又称钩藤钩。有单钩和双钩两种，习以为双钩者佳。原药生用。
 
-本品味甘而性微寒，为肝、心包二经之药。.肝主风，心包主火，凡肝风内动、心火上炎，风火相煽而病惊风抽搐、头巨眩晕者，可以此清心泄火、平肝息风，故有清热、息风、止痉、平肝之功，为热极生风之抽搐及肝阳上亢之眩晕头痛、目赤等证所常用。对小儿惊风初起尤为相宜。
+本品味甘而性微寒，为肝、心包二经之药。肝主风，心包主火，凡肝风内动、心火上炎，风火相煽而病惊风抽搐、头巨眩晕者，可以此清心泄火、平肝息风，故有清热、息风、止痉、平肝之功，为热极生风之抽搐及肝阳上亢之眩晕头痛、目赤等证所常用。对小儿惊风初起尤为相宜。
 
 【临证应用】钩藤用干惊痫抽搐，多与天麻、石决明、全蝎等配伍；热重者，可加羚羊角、龙胆草、菊花等。对肝阳上亢的头晕、目眩等证，可与天麻、石决明等伍用，如天麻钩藤饮。现代研究本品具有降压作用，可用于高血压病而属肝热阳亢者疗效颇佳。
 
