--- a/ok/bc/bc10-0.0.6.0.0.md
+++ b/ok/bc/bc10-0.0.6.0.0.md
@@ -11,4 +11,4 @@
 
 【临证应用】天麻性平，洽肝风内动、惊痫抽搐，不论寒证、热证皆可配用。治小儿热极生风之急惊风，可配钩藤、羚羊角、全蝎等，如钩藤饮；治小儿慢惊，则以本品配人参、白术、僵蚕等同用，如醒脾散。治破伤风，痉挛抽搐，常配南星、白附子等药，如玉真散。对于肝阳上亢所致眩晕、头痛，最为常用，多与川芎同用，如天麻丸。至于风痰上扰的眩晕，亦可配伍半夏、茯苓、白术等同用，如半夏白术天麻汤。总之，本品甘润性平力缓，单用效力不强，惟据虚实寒热适当配伍，疗效才佳。风湿痹痛、主配祛风湿的羌活、秦艽、桑寄生等用。
 
-【用量用法】 3—10克，煎服。研末吞服毎次1-1.5克。
+【用量用法】 3—10克，煎服。研末吞服每次1-1.5克。
