--- a/ok/rm/rm05.md
+++ b/ok/rm/rm05.md
@@ -82,7 +82,7 @@
 
 内经讲春夏养阳，秋冬养阴，就是在天人合一的大背景下，借助自然之力，用最低的成本来完成养阳、养阴的目的。
 
-春夏之时，自然界阳气的增长会增加人体阳气，打开腠理，调动阳气向肌表运动。春天，气血充实于经脉。到夏天经脉中的气血已经充满，进入络脉、皮肤。到了长夏，经脉、络脉中的气血都已充满，开始向内充实到肌肉。如能借此机会适度增加劳作，则使用很少的肾精就可以养阳，节省了肾精的消耗。反之如果此时休息，休息需要阳气内藏于脏腑，与自然界调动阳气的方向相反，两者冲突，养阴效果不好。
+春夏之时，自然界增长的阳气会带动人体阳气增长，并打开腠理，调动阳气向肌表运动。春天，气血充实于经脉。到夏天经脉中的气血已经充满，进入络脉、皮肤。到了长夏，经脉、络脉中的气血都已充满，开始向内充实到肌肉。如能借此机会适度增加劳作，则使用很少的肾精就可以养阳，节省了肾精的消耗。反之如果此时休息，休息需要阳气内藏于脏腑，与自然界调动阳气的方向相反，两者冲突，养阴效果不好。
 
 秋冬之时，自然界阳气减少，其施加于人体的阳气也减少。人的腠理开始闭合，阳气趋向于脏腑。秋天，表皮气血减少。冬天，气血多藏于内部的骨髓与五脏。人应随之减少劳作，降低气血的总量消耗，会剩余更多的后天之精存入五脏，完成养阴的过程。反之如果此时劳作，则需要调用更多的肾精来转化阳气，增加精的消耗。
 
