--- a/ok/bc/bc10-0.0.1.0.0.md
+++ b/ok/bc/bc10-0.0.1.0.0.md
@@ -10,7 +10,7 @@
 
 【临证应用】羚羊角用于壮热不退、热极动风之证，常与钩藤、白芍、菊花等同用，如羚角钩藤汤；用于肝火炽盛的头痛闫赤，常与龙胆草、决明子、黄芩同用，如羚羊角散；若阴虛、肝阳上亢而致头晕目眩，可与石决明、菊花等配伍，以加强平肝潜阳之功。用于温热病高热烦躁、神昏谵语、痉厥抽搐，以及热毒发斑等症，则每与犀角、石膏等同用，如羚犀白虎汤。
 
-羚羊角与犀角皆为咸寒之品，在温热病中，二药常同用。然羚羊角以入肝为主，清肝火而善于息风止痉；犀角以入心经为主，泻心火而善于凉血解毒。故见神昏者，多用犀角，而神昏兼痉厥者，则需犀、羚合用。故前人云s：“在肝之病，必用羚羊，亦犹在心之病，必用犀角也。”
+羚羊角与犀角皆为咸寒之品，在温热病中，二药常同用。然羚羊角以入肝为主，清肝火而善于息风止痉；犀角以入心经为主，泻心火而善于凉血解毒。故见神昏者，多用犀角，而神昏兼痉厥者，则需犀、羚合用。故前人云：“在肝之病，必用羚羊，亦犹在心之病，必用犀角也。”
 
 【用量用法】1—3克。入汤剂宜另煎冲服；锉末或磨汁服，每次0.3—0.6克。
 
