--- a/ok/bc/bc10-0.0.4.0.0.md
+++ b/ok/bc/bc10-0.0.4.0.0.md
@@ -8,5 +8,5 @@
 
 本品味苦性寒质重，寒能泄热、重主镇降。入肝、心血分。故有平肝潜阳、清热泄火、重镇降逆、凉血止血之功。对肝阳上亢的头痛、眩晕，气逆不降的噫气、呃逆、呕吐及气喘，血热妄行之吐、衄血及崩漏、带下等证；都有较好的疗效。《备要》云本品可治“胎动难产”，既能安胎，又能下胎治产难、胞衣不下。但据其功效，毕竟是苦寒重降之品，故虚寒证及孕妇均不宜用。小儿慢惊也少应用。
 
-【临证应用】 代赭用于头痛眩晕，常与龙骨、牡蛎、白芍、牛膝等同用，以治肝阳上亢之证，如镇肝息风汤；用于暧气、呃逆、呕吐等证，常与旋覆花、半夏、生姜等配伍，如旋覆代赭汤；若肺肾虚的气逆喘息，可与党参、山茱萸、山药、苏子等补肺纳气药同用，如参赭镇气汤；用于吐血衄血，可与生地、白芍、茜’草根、侧柏叶等同用；治崩漏带下，可单用煅赭石为末服。本品亦可煅研外敷，以治创伤出血。
+【临证应用】 代赭用于头痛眩晕，常与龙骨、牡蛎、白芍、牛膝等同用，以治肝阳上亢之证，如镇肝息风汤；用于暧气、呃逆、呕吐等证，常与旋覆花、半夏、生姜等配伍，如旋覆代赭汤；若肺肾虚的气逆喘息，可与党参、山茱萸、山药、苏子等补肺纳气药同用，如参赭镇气汤；用于吐血衄血，可与生地、白芍、茜草根、侧柏叶等同用；治崩漏带下，可单用煅赭石为末服。本品亦可煅研外敷，以治创伤出血。
 【用量用法】10—30克，煎服。外用适量。
