--- a/ok/bc/bc10-0.0.4.0.0.md
+++ b/ok/bc/bc10-0.0.4.0.0.md
@@ -1,6 +1,6 @@
 ### 代赭石
 
-**〔原文〕苦寒。养血气，平血热。入肝与心包，专治二经血分之病，吐衄崩带，胎动难产，小儿慢惊**，赭石半钱，冬瓜仁汤调服，**金疮长肉**。张仲景治伤寒，汗吐下后，心卜痞硬噫气，用旋覆代赭汤(1)。取其重以镇虚逆，赤以养阴血也。今用治膈噎甚效。**煅红醋淬，水飞用。干姜为使。畏雄、附**。
+**〔原文〕苦寒。养血气，平血热。入肝与心包，专治二经血分之病，吐衄崩带，胎动难产，小儿慢惊**，赭石半钱，冬瓜仁汤调服，**金疮长肉**。张仲景治伤寒，汗吐下后，心下痞硬噫气，用旋覆代赭汤(1)。取其重以镇虚逆，赤以养阴血也。今用治膈噎甚效。**煅红醋淬，水飞用。干姜为使。畏雄、附**。
 
 【讲解】	(1)旋覆代赭汤：原作“代赭旋覆汤”，据《伤寒论》辨太阳病脉证并治法下乙转。
 
