--- a/ok/bc/bc10-0.0.5.0.0.md
+++ b/ok/bc/bc10-0.0.5.0.0.md
@@ -1,6 +1,6 @@
 ### 钩藤钩 
 
-**〔原文〕甘微苦寒。除心热，平肝风。治大人头旋目眩，小儿惊啼瘛疭**（1），音炽纵。筋急而缩为瘛，筋缓而弛为疭，伸缩不己为瘛疭，俗谓之搐搦是也。**客忤**（2）**胎风**（3），**发斑疹，主肝风相火之病，风静火息，则诸证自除**。相火散行于胆、三焦、心包。**有刺，类钓钩。藤细多钩者良**。纯用钩其功加倍。**久煎则无力。**
+**〔原文〕甘微苦寒。除心热，平肝风。治大人头旋目眩，小儿惊啼瘛疭**（1），<small>音炽纵。筋急而缩为瘛，筋缓而弛为疭，伸缩不己为瘛疭，俗谓之搐搦是也。</small>**客忤**（2）**胎风**（3），**发斑疹，主肝风相火之病，风静火息，则诸证自除**。<small>相火散行于胆、三焦、心包。</small>**有刺，类钓钩。藤细多钩者良**。<small>纯用钩其功加倍。</small>**久煎则无力。**
 
 【讲解】（1）瘛疭：指筋肉抽搐，俗称抽风。（2）客忤：多指小儿骤见生人或闻异声，突见异物而引起惊吓啼哭，状似惊痫之证。（3）胎风：婴儿触冒风邪或因断脐感染而引起的壮热呕吐、精神不宁、睡易惊醒、手足抽掣等证。
 
