--- a/ok/bc/bc10-0.0.9.0.0.md
+++ b/ok/bc/bc10-0.0.9.0.0.md
@@ -1,6 +1,6 @@
 ### 全蝎
 
-**〔原文〕辛甘有毒。色青属木，故治诸风眩掉**，皆质肝木。**惊痫抽搐，口眼㖞斜**，白附、僵蚕、全蝎等分为末，名牵正散。酒服二钱甚效。**疟疾风疮，耳聋带疵，厥阴风木之病**。 李东垣曰：凡疝气带下，皆属于风。蝎乃治风要药，俱宜加而用之。汪机曰：破伤风，宜以全蝎、防风为主。**类中风、慢脾惊属虚者忌用。全用去足焙，或用尾**，尾力尤紧。**形紧小者良。**人被螫者，涂蜗牛即解。
+**〔原文〕辛甘有毒。色青属木，故治诸风眩掉**，<small>皆属肝木。</small>**惊痫抽搐，口眼㖞斜**，<small>白附、僵蚕、全蝎等分为末，名牵正散。酒服二钱甚效。</small>**疟疾风疮，耳聋带疵，厥阴风木之病**。 <small>李东垣曰：凡疝气带下，皆属于风。蝎乃治风要药，俱宜加而用之。汪机曰：破伤风，宜以全蝎、防风为主。</small>**类中风、慢脾惊属虚者忌用。全用去足焙，或用尾**，<small>尾力尤紧。</small>**形紧小者良。**<small>人被螫者，涂蜗牛即解。</small>
 
 【讲解】 **全蝎功专息风止痉，并能攻毒散结，通络止痛**。为钳蝎科动物东亚钳蝎的干燥全体。如单用尾（后腹部），称为“蝎尾”，又名“蝎梢”。晒干或微火焙干用。
 
