--- a/ok/bc/bc10-0.0.10.0.0.md
+++ b/ok/bc/bc10-0.0.10.0.0.md
@@ -1,6 +1,6 @@
 ### 蜈蚣
 
-**〔原文〕辛温有毒。入厥阴肝经。善走能散，治脐风撮口**（1）炙末，猪乳调服，**惊痫瘰疬，蛇癥**（2）能制蛇。**疮甲**（3）。趾甲内恶肉突出，俗名鸡眼睛，蜈蚣焙研敷之，以南星末醋调敷四围。**杀虫堕胎。取赤足黑头者，火炙，去头足尾甲，将荷叶火煨用，或酒炙。畏蜘蛛、蜒蚰**、不敢过所行之路，触著即死。**鸡屎、桑皮、盐**，中其毒者，以桑汁、盐、蒜涂之。被咬者，捕蜘蛛置咬处，自吸其毒，蜘蛛死，置水中，吐而活之。
+**〔原文〕辛温有毒。入厥阴肝经。善走能散，治脐风撮口**（1）<small>炙末，猪乳调服，</small>**惊痫瘰疬，蛇癥**（2）<small>能制蛇。</small>**疮甲**（3）。<small>趾甲内恶肉突出，俗名鸡眼睛，蜈蚣焙研敷之，以南星末醋调敷四围。</small>**杀虫堕胎。取赤足黑头者，火炙，去头足尾甲，将荷叶火煨用，或酒炙。畏蜘蛛、蜒蚰**、<small>不敢过所行之路，触著即死。</small>**鸡屎、桑皮、盐**，<small>中其毒者，以桑汁、盐、蒜涂之。被咬者，捕蜘蛛置咬处，自吸其毒，蜘蛛死，置水中，吐而活之。</small>
 
 【讲解】	（1）脐风撮口：脐风即新生儿破伤风，由断脐不洁，感染外邪所致。其症以痉挛抽搐、牙关紧闭、 面呈苦笑状为特征。撮口，又名撮风，临床以唇口收紧，撮如鱼口为特征。（2）蛇癥：蛇咬后发生的複腔内痞块。（3）疮甲：即甲沟炎。赴甲沟溃烂，肌肉突出。
 
