--- a/ok/bc/bc10-0.0.8.0.0.md
+++ b/ok/bc/bc10-0.0.8.0.0.md
@@ -1,10 +1,10 @@
 ### 僵 蚕
 
-**〔原文〕辛咸微温。僵而不腐，得清化之气，故能治风化痰，散结行经**。蚕病则僵，故因以治风，能散相火逆结之痰。 **其气味俱薄，轻浮而升，入肺肝胃三经，治中风失音，头风齿痛，喉痹咽肿**， 炒为末，姜汤调下钱，当吐出顽痰，**丹毒瘙痒**，皆风热为病，**瘰疬结核，痰疟血病，崩中带下**，风热乘肝，**小儿惊疳**（1），**肤如鳞甲**，由气血不足，亦名胎垢，煎汤浴之。**下乳汁，灭瘢痕。荣诸证由于血虚而无风寒客邪者勿用。以蚕头色白条直者良，糯米泔浸一日，待桑涎浮出，漉起焙干，拭净肉毛口甲捣用。恶桑螵蛸、茯苓、茯神、桔梗、萆薢**。
+**〔原文〕辛咸微温。僵而不腐，得清化之气，故能治风化痰，散结行经**。<small>蚕病则僵，故因以治风，能散相火逆结之痰。</small> **其气味俱薄，轻浮而升，入肺肝胃三经，治中风失音，头风齿痛，喉痹咽肿**，<small> 炒为末，姜汤调下一钱，当吐出顽痰，</small>**丹毒瘙痒**，<small>皆风热为病，</small>**瘰疬结核，痰疟血病，崩中带下**，<small>风热乘肝，</small>**小儿惊疳**（1），**肤如鳞甲**，<small>由气血不足，亦名胎垢，煎汤浴之。</small>**下乳汁，灭瘢痕。荣诸证由于血虚而无风寒客邪者勿用。以蚕头色白条直者良，糯米泔浸一日，待桑涎浮出，漉起焙干，拭净肉毛口甲捣用。恶桑螵蛸、茯苓、茯神、桔梗、萆薢**。
 
-**蚕茧甘温。能泻膀胱相火，引清气上朝于口，止消渴。**蚕与马，并属午，为离，主心。作茧退藏之际，故缲丝汤饮之，能抑心火而治消渴。**痈疽无头者，烧灰酒服**。服一枚出一头，二枚出二头。
+**蚕茧甘温。能泻膀胱相火，引清气上朝于口，止消渴。**<small>蚕与马，并属午，为离，主心。作茧退藏之际，故缲丝汤饮之，能抑心火而治消渴。</small>**痈疽无头者，烧灰酒服**。<small>服一枚出一头，二枚出二头。</small>
 
-**雄蚕蛾气热性淫，主固精强阳，交接不倦**。蚕退纸烧存性，入麝少许，蜜和，敷走马牙疳，加白矾尤妙。《百一方》蚕纸烧灰，酒水饮下，能治邪祟发狂悲泣。
+**雄蚕蛾气热性淫，主固精强阳，交接不倦**。<small>蚕退纸烧存性，入麝少许，蜜和，敷走马牙疳，加白矾尤妙。《百一方》蚕纸烧灰，酒水饮下，能治邪祟发狂悲泣。</small>
 
 【讲解】（1）惊疳：又名心疳。为五疳之一。证因心经郁热，出现面黄额赤，壮热烦躁，口舌生疮，小便赤涩，盗汗或虚惊。以清心泻热为治。
 
@@ -14,10 +14,10 @@
 
 僵蚕祛风止痉之功，颇与蝉蜕相似，治肝肺风热之证，二者常相须配用，以加强疗效。但蝉蜕体轻，功偏透疹退翳；僵蚕质重，功偏化痰散结。此为两者之异。
 
-【临证应用】白僵蚕用于小儿急惊，痉孪抽搐，常与全蝎、天麻、胆南星等同用，如千金散；若属脾虚久泻，慢惊抽搐，又当配党参、白术、天麻等同用，如醒脾散；治中风口眼㖞斜，面部肌肉抽动，可与全蝎、白附子等同用，如牵正散。用于风热头痛，迎风流泪，可配荆芥、桑叶、木贼等苘用。如白僵蚕散；治风热喉痛，则与桔梗、甘草等同用，如六味汤。用于瘰疬痰核、痄腮、丹毒等证，《外台秘要》单味研末服，若配浙贝母、夏枯草、连翘等则效更佳若与蝉蜕、薄荷、浮萍等同用，可洽风疹瘙痒，共奏祛风止痒之功。
+【临证应用】白僵蚕用于小儿急惊，痉孪抽搐，常与全蝎、天麻、胆南星等同用，如千金散；若属脾虚久泻，慢惊抽搐，又当配党参、白术、天麻等同用，如醒脾散；治中风口眼㖞斜，面部肌肉抽动，可与全蝎、白附子等同用，如牵正散。用于风热头痛，迎风流泪，可配荆芥、桑叶、木贼等苘用。如白僵蚕散；治风热喉痛，则与桔梗、甘草等同用，如六味汤。用于瘰疬痰核、痄腮、丹毒等证，《外台秘要》单味研末服，若配浙贝母、夏枯草、连翘等则效更佳若与蝉蜕、薄荷、浮萍等同用，可治风疹瘙痒，共奏祛风止痒之功。
 
 【用量用法】 5—15克，煎服。散剂每次1-3克。散风热宜生用，一般多炙用。
 
-附：蚕茧即家蚕蛾的茧壳。味甘性温，功能止血疗疮，治便血、尿血、血崩及疮痈等证。
+**附：蚕茧** 即家蚕蛾的茧壳。味甘性温，功能止血疗疮，治便血、尿血、血崩及疮痈等证。
 
-雄蚕蛾即家蚕蛾的雄性全虫。味咸性温，入肝、肾经。功能补肝益肾、壮阳涩精，主治阳痿、滑精。
+**雄蚕蛾** 即家蚕蛾的雄性全虫。味咸性温，入肝、肾经。功能补肝益肾、壮阳涩精，主治阳痿、滑精。
