--- a/ok/rm/rm01.md
+++ b/ok/rm/rm01.md
@@ -98,11 +98,19 @@
 
 所以说“虚则补之，实则泻之”。总的来说，补虚叫做扶正，泻实叫做祛邪。所以说中医的治法无非扶正祛邪而已。
 
-这里要注意的是，一定分清问题的虚实，然后再采取对应的补泻方法；如果判断错误，比如本来是有火的实热，误判成了虚寒，采取了补阳（增强暖气）的措施，就会火上浇油，让室温更加偏离平衡点。这会造成更严重的问题。
+#### 小结
+
+保持指标平衡的能力不足称为虚。原则上，维持指标平衡的能力越强越好。比如城市楼房与农村平房相比较，楼房维持平衡的能力强，遇到狂风、暴雨、寒潮的时候，楼房更具有抵御这些外邪的能力，所以人们更喜欢住楼房。对于人来讲，健康的人抵御外界风、寒、暑、湿的能力强，也就是维持自身平衡的能力强大。反之，不健康的人维持平衡的能力弱，稍受干扰就有疾病发生。
+
+不该有的干扰平衡的因素叫邪实。原则上最好没有，如果有的话要控制在一个可接受的范围内，不要超过人的调节平衡能力，超过则发病。
+
+这里要注意的是，一定分清问题的虚实，再采取对应的补泻方法；如果判断错误，比如本来是有火的实热，误判成了虚寒，采取了补阳（增强暖气）的措施，就会火上浇油，让室温更加偏离平衡点。这会造成更严重的问题。
 
 所以一定不能让虚的更虚、实的更实，不能犯虚虚实实的错误，这是中医需要遵循的最基本原则。
 
-另外，在扶正祛邪过程中，扶正的方法用的不恰当会有留邪的隐患，祛邪的方法用不好可能会伤正。所以要注意扶正不留邪，祛邪不伤正，这个在以后的实践中要非常注意。
+另外，在扶正祛邪过程中，扶正的方法往往会有留邪的隐患，祛邪的方法往往会伤正。所以无论是扶正还是祛邪，都要注意对应的负面作用。
+
+因所指的对象不同，所以虚实并不对立。单纯的正气虚或者邪气实往往只是疾病的初起阶段，病因单一，治疗相对简单。慢性病、老年病、严重疾病往往是正气虚与邪气实共存。解决这种问题要分清主次，确定先补还是先泻，或者重补轻泻、轻补重泻等等。
 
 > **无盛盛，无虚虚，而遗人天殃，无致邪，无失正，绝人长命**
 >
@@ -123,14 +131,6 @@
 > 五脏脉已绝于内者，肾肝气已绝于内也，而医反补其心肺；五脏脉已绝于外者，心肺气已绝于外也，而医反补其肾肝。阳绝补阴，阴绝补阳，是谓**实实虚虚，损不足而益有余。如此死者，医杀之耳**。
 >
 > 《难经-十二难》
-
-#### 小结
-
-保持指标平衡的能力不足称为虚。原则上，维持指标平衡的能力越强越好。比如城市楼房与农村平房相比较，楼房维持平衡的能力强，遇到狂风、暴雨、寒潮的时候，楼房更具有抵御这些外邪的能力，所以人们更喜欢住楼房。对于人来讲，健康的人抵御外界风、寒、暑、湿的能力强，也就是维持自身平衡的能力强大。反之，不健康的人维持平衡的能力弱，稍受干扰就有疾病发生。
-
-不该有的干扰平衡的因素叫邪实。原则上最好没有，如果有的话要控制在一个可接受的范围内，不要超过人的调节平衡能力，超过则发病。
-
-另外，虚实共存的情况很常见，比如既有阳虚又有实寒而表现出寒证，或者既有阴虚又有实热而表现出热证，再或者阴虚、阳虚、实热、实寒兼有，导致虚实夹杂、寒热混杂的复杂情况。解决这种问题的难度比较大，要分清主次，确定先补还是先泻，或者补泻同用。
 
 ### 1.3、平衡的控制：
 
