--- a/ok/rm/rm05.md
+++ b/ok/rm/rm05.md
@@ -42,13 +42,13 @@
 
 #### 3、气血总量与分布的波动变化
 
-人之气血维持体内环境，给各种功能提供营养、能量。其分布可分为内外两大区域。内为脏腑，外为形体组织。两者使用的气血合起来即为气血总量。
+精为气血之本。脾胃吸收的水谷精微有两个去处，一个是转化为全身的气血消耗使用，另一个是存入五脏，成为五脏所藏的精气。因此在各脏腑功能正常、脾胃吸收水谷精微的速度一定的前提下，气血总量与五脏藏精量成反比。气血总量高的时候，五脏藏精量降低。气血总量低的时候，五脏藏精量高。
 
-从总量角度看，因气血来自精的转化，在脾胃吸收精微物质的量一定的前提下，气血总量与五脏藏精量成反比。气血总量高的时候，五脏藏精量降低。气血总量低的时候，五脏藏精量高、精气足。
+气血的分布可分为内外两大区域。内为脏腑，外为形体组织。气血在整体均衡分布的基础上稍有波动。形体获得气血多的时候，脏腑获得的少，反之亦然。
 
-从分布角度看，全身气血在整体均衡分布的基础上稍有波动。形体获得气血多的时候，脏腑获得的少，反之亦然。
+劳作时，消耗的气血总量变大，而相应五脏的藏精量减少。气血的分布为形体气血偏多而脏腑偏少，有利于形体组织健康，使人的皮肤致密、肌肉结实、血脉通畅，即为养阳；休息时，消耗的气血总量小，而五脏藏精量增加。气血的分布为形体气血偏少而脏腑偏多，有利于脏腑化物、藏精等后勤保障工作，即为养阴。
 
-劳作时，消耗的气血总量大，分布为形体气血偏多而脏腑偏少，有利于形体组织健康，使人的皮肤致密、肌肉结实、血脉通畅，即为养阳；休息时，消耗的气血总量小，分布为形体气血偏少而脏腑偏多，有利于脏腑化物、藏精等后勤保障工作，即为养阴。
+因此，正常人在劳作与休息之间应维持一种平衡。劳作累了要休息，休息多了要劳作，所谓一阴一阳谓之道。两者都有合适的度，需要劳作以养阳，又不能过度劳累；需要休息以养阴，又不能过度休息。
 
 > **阴者，藏精而起亟也；阳者，卫外而为固也。**阴不胜其阳，则脉流薄疾，并乃狂。阳不胜其阴，则五脏气争，九窍不通。
 >
@@ -60,35 +60,27 @@
 >
 > 《黄帝内经讲解-阴精与阳气的主要功能和关系》
 
-因此，正常人在劳作与休息之间应维持一种平衡。劳作累了要休息，休息多了要劳作，所谓一阴一阳谓之道。两者都有合适的度，需要劳作以养阳，又不能过度劳累；需要休息以养阴，又不能过度休息。
+<注>:"阴者，藏精而起亟也；阳者，卫外而为固也"，传统上，此处理解阴为阴精，阳为阳气，因解释不通顺，是中医的一个难点。此处的阴应理解为内在五脏、阳为外在形体，对应内经的“内为阴，外为阳”比较好。
 
-##### 3.1、脉象与气血的关系
-
-脉的本质是血液在脉管中的波动情况。血液运行的初始动力是心气，过程又需要宗气的辅助。因此脉象能够体现人体气血的分配以及气血之间的平衡情况。正常的脉象三部九侯都有脉，代表全身内外都有气血在起作用。当各部位气血有波动的时候，在脉象上有对应的变化。比如夏天的时候，气血分布于机体表层多一些，则脉象偏浮一点，轻按的时候脉比较明显，重按稍弱；冬天气血在脏腑多一点，则脉象偏沉一点，轻取稍弱，重按明显。
-
-> 正常脉象，又称平脉、常脉。平脉的至数是一息（一呼一吸）脉来四至，脉象和缓有力均匀，**寸、关、尺三部和浮、中、沉九候均有脉**。
->
-> 《中医药学概论-诊法》
-
-诊脉的时间，一般选择在清晨日出，未进饮食之时，此时气血在全身的分配最平均。夜晚气血偏于里，白天气血偏于表，饮食后气血偏于脾胃，不同情况下气血各有所偏。所以若在其它时间诊脉，当脉象有些异常的时候，需要判断是正常的气血变化还是异常的气血变化。
-
-> **诊法常以平旦（1），阴气未动，阳气未散(2)，饮食未进，经脉未盛，络脉调匀，气血未乱（3），故乃可诊有过之脉(4)。**
->
-> 《素问•脉要精微论》
-
-一般来说，人在白天、夏天、运动劳作、外感邪气的时候，气血消耗总量大，偏聚集于外在形体，脉偏浮；夜晚、冬天、休息、五脏患病的时候，气血消耗总量小，偏聚集于内在脏腑，脉偏沉。
-
-##### 3.2、一年四季的变化
+##### 3.1、一年四季的变化
 
 内经讲春夏养阳，秋冬养阴，就是在天人合一的大背景下，借助自然之力，用最低的成本来完成养阳、养阴的目的。
 
-春夏之时，自然界增长的阳气会带动人体阳气增长，并打开腠理，调动阳气向肌表运动。春天，气血充实于经脉。到夏天经脉中的气血已经充满，进入络脉、皮肤。到了长夏，经脉、络脉中的气血都已充满，开始向内充实到肌肉。如能借此机会适度增加劳作，则使用很少的肾精就可以养阳，节省了肾精的消耗。反之如果此时休息，休息需要阳气内藏于脏腑，与自然界调动阳气的方向相反，两者冲突，养阴效果不好。
+春夏之时，自然界增长的阳气会带动人体阳气增长，并打开腠理，调动气血向肌表运动。春天，气血充实于经脉。到夏天经脉中的气血已经充满，进入络脉、皮肤。到了长夏，经脉、络脉中的气血都已充满，开始向内充实到肌肉。如能借此机会适度增加劳作，则使用很少的精就可以养阳。反之如果此时休息，休息需要阳气内藏于脏腑，与自然界调动阳气的方向相反，两者冲突，养阴效果不好。
 
-秋冬之时，自然界阳气减少，其施加于人体的阳气也减少。人的腠理开始闭合，阳气趋向于脏腑。秋天，表皮气血减少。冬天，气血多藏于内部的骨髓与五脏。人应随之减少劳作，降低气血的总量消耗，会剩余更多的后天之精存入五脏，完成养阴的过程。反之如果此时劳作，则需要调用更多的肾精来转化阳气，增加精的消耗。
+秋冬之时，自然界阳气减少，其施加于人体的阳气也减少。人的腠理开始闭合，气血趋向于脏腑。秋天，表皮气血减少。冬天，气血多藏于内部的骨髓与五脏。人应随之减少劳作，降低气血的总量消耗，会剩余更多的后天之精存入五脏，完成养阴的过程。
+
+如果冬天过度劳作，因此时获得外界阳气的帮助较少，需要消耗更多的精来转化气血。如此一来，一方面五脏藏精不够，不利于来年春夏养阳使用。另一方面也需要消耗更多的先天肾精，会缩短人的寿命。再有就是，冬天劳作出汗，寒气容易经皮肤腠理而入，可能直接发为伤寒病，或者潜伏于体内，到春夏发为其它病。
 
 > 岐伯曰：**春**者天气始开，地气始泄，冻解冰释，水行经通，故**人气在脉**。**夏**者经满气溢，入**孙络受血**，**皮肤充实**。**长夏**者，**经络皆盛**，内**溢肌**中。**秋**者天气始收，**腠理闭塞，皮肤引急**。**冬**者，盖藏**血气在中**。内着**骨髓**，通于**五脏**。是故邪气者，常**随四时之气血而入客**也。至其变化，不可为度，然必从其经气，辟除其邪，除其邪则乱气不生。
 >
 > 《素问-四时刺逆从论篇》
+
+> **冬时严寒，万类深藏，君子固密，则不伤于寒，触冒之者，乃名伤寒**耳。其伤于四时之气，皆能为病，以伤寒为毒者，以其最成杀厉之气也。中而即病者，名曰伤寒（2）。不即病者，**寒毒藏于肌肤，至春变为温病，至夏变为暑病**。暑病者，热极重于温也（3）。是以**辛苦之人，春夏多温热病者，皆由冬时触寒所致**，非时行之气也。...
+>
+> **从霜降以后，至春分以前，凡有触冒霜露，体中寒即病者，谓之伤寒也。**
+>
+> 《伤寒论讲解-伤寒例》
 
 从五脏角度看，春天精化气血由肝主导；夏天气血充养形体，由心主导；秋天气血收隐，由肺主导。冬天精气潜藏，由肾主导。
 
@@ -98,9 +90,11 @@
 >
 > **肾者，主蛰，封藏之本（10），精之处也(11)；...通于冬气(14)。**
 >
-> **肝者，罢极之本(15)，魂之居也(16)；...通于春气(21)。**
-
+> **肝者，罢极之本(15)，魂之居也(16)；...通于春气(21)。**...
+>
 > 肝主疏泄而调畅气机，同时又主升发阳气，促进全身气血的流畅，这本身就具有生养人体之气的作用。
+>
+> 《黄帝内经讲解-五脏功能与形体组织、四时阴阳的关系》
 
 > **五藏者，所以参天地，副阴阳(1)，而连四时，化五节者也(2)。**
 >
@@ -138,7 +132,7 @@
 >
 > 《素问·生气通天论》
 
-##### 3.3、一昼夜的波动变化
+##### 3.2、一昼夜的波动变化
 
 另外，一昼夜的阳气波动，原理与一年的阳气波动原理差不多，所以人应白天工作，晚上休息。昼夜波动幅度不如四季波动大，所以中医常用四季变化来举例。
 
@@ -151,6 +145,22 @@
 > **阳气者，一日而主外（1），平旦人气生，日中而阳气隆，日西而阳气已虚，气门乃闭（2）。**
 >
 > 《素问•生气通天论》
+
+##### 3.3、脉象与气血的关系
+
+脉的本质是血液在脉管中的波动情况。血液运行的初始动力是心气，过程又需要宗气的辅助。因此脉象能够体现人体气血的分配以及气血之间的平衡情况。正常的脉象三部九侯都有脉，代表全身内外都有气血在起作用。当各部位气血有波动的时候，在脉象上有对应的变化。比如夏天的时候，气血分布于机体表层多一些，则脉象偏浮一点，轻按的时候脉比较明显，重按稍弱；冬天气血在脏腑多一点，则脉象偏沉一点，轻取稍弱，重按明显。
+
+> 正常脉象，又称平脉、常脉。平脉的至数是一息（一呼一吸）脉来四至，脉象和缓有力均匀，**寸、关、尺三部和浮、中、沉九候均有脉**。
+>
+> 《中医药学概论-诊法》
+
+诊脉的时间，一般选择在清晨日出，未进饮食之时，此时气血在全身的分配最平均。夜晚气血偏于里，白天气血偏于表，饮食后气血偏于脾胃，不同情况下气血各有所偏。所以若在其它时间诊脉，当脉象有些异常的时候，需要判断是正常的气血变化还是异常的气血变化。
+
+> **诊法常以平旦（1），阴气未动，阳气未散(2)，饮食未进，经脉未盛，络脉调匀，气血未乱（3），故乃可诊有过之脉(4)。**
+>
+> 《素问•脉要精微论》
+
+一般来说，人在白天、夏天、运动劳作、外感邪气的时候，气血消耗总量大，偏聚集于外在形体，脉偏浮；夜晚、冬天、休息、五脏患病的时候，气血消耗总量小，偏聚集于内在脏腑，脉偏沉。
 
 ##### 3.4、小结
 
