--- a/ok/rm/rm01.md
+++ b/ok/rm/rm01.md
@@ -250,7 +250,7 @@
 
 空间差异：在任意时间点，房间不同位置的温度有高低不同，这是温度在空间分布上差异。
 
-阴阳从时间角度看就是波动，从空间角度看就是不同空间范围内的指标差异。
+阴阳从时间角度看就是指标在正常范围内的波动，从空间角度看就是不同空间范围内指标的合理差异。
 
 
 
