--- a/ok/rm/rm02.md
+++ b/ok/rm/rm02.md
@@ -470,11 +470,6 @@
 
 因为五行对生命的重要性，所以内经中有很大篇幅是介绍脏腑五行与身体各个部分的关系。教材《概论》中把五行学说直接放在阴阳学说之后，作为第一章的主要内容进行介绍。
 
-```
-五行学说在理论界属于争议比较大的一个学说。争议的原因主要在于五行生克乘侮的现象在现代生活和科技中不那么常见，不象阴阳平衡的道理，生活中随处可见。
-个人认为，五行学说针对的是生命的过程。而我们现在对生命的过程变化所知还是甚少，到现在科学技术的发展还无法合成生命。也许有一天，生命的奥秘被彻底揭示的时候，可能五行的原理会得到验证。
-```
-
 ###### 五行与五方
 
 前面讲阴阳的时候说过，阴阳从时间角度看是指标的波动，从空间角度看是不同位置的指标差异。
@@ -587,9 +582,9 @@
 
 **需要强调一下，上述这些概念都是在平衡范围内的差异，是一种符号，比如六气中的寒，指的是自然界温度-20度到40度之间偏低的部分，并非指的是-50度甚至更冷的严寒，六气中的热指的是正常范围中偏高的部分，不是指100度甚至更高的极热。超过正常范围的极热和极寒是不该出现在健康自然界中的，一旦这种极热、极寒大范围出现在自然界中，属于引起极度失衡的因素，会对自然界产生毁灭性的后果。**
 
-**五行也是如此，五行是地气正常变化范围内的差异。**
+**五行也是如此，代表地气能量正常变化范围内的差异。**
 
-用六气（风、热、暑、湿、燥、寒）六个符号代表天气一年正常变化的六个阶段，五行（木、火、土、金、水）代表地气一年正常变化的五个阶段。
+用六气（风、热、暑、湿、燥、寒）六个符号代表天气一年正常变化的六个阶段，五行（木、火、土、金、水）五个符号代表地气一年正常变化的五个阶段。
 
 另外，前面阴阳平衡章节谈到寒热是指的温度向上超出平衡范围为热，向下超出平衡范围为寒。这个寒热与六气（风、热、暑、湿、燥、寒）中的寒热是两个意思。两者混用又增加了中医的理解难度。
 
@@ -631,7 +626,7 @@
 
 #### 5.3 北斗
 
-北斗在古代是神明的意思，具体意义不清晰，可以从下面的资料简单了解一下。
+北斗七星在古代有神明的意思，教材的解释是古代通过北斗的斗柄指向确定季节，所以为“神明之纪”，可以参考。
 
 > *“神明”，这里指北斗。《说文》：“神，从示，’中声”。示，从二，从川，指天上日月星。《说文》：“示，从二、三川，日月星也。观乎天文，以察时变。”王充：“神者，申也。”申，指十二支的方位（西南方），北斗七星，杓在申方，则斗柄指寅方（东北方），所谓“斗柄回寅，天下皆春”。北斗，是天空的指时针，它围绕北极运转，一年一周，古代常通过观察斗柄指向，以确定时令季节。故张志聪注：“神明者，日月斗星也。纪，以日月纪度，星斗定位也。”这就是“神明为之纪”的含义。*
 >
