--- a/ok/rm/rm03-0.1.0.0.0.md
+++ b/ok/rm/rm03-0.1.0.0.0.md
@@ -70,6 +70,8 @@
 
 这里的属天指的是相对而言，气态物质的比例高一些或者作用强一些。属地则相反。这种方式定义的几种天地，相互之间都有类似自然界气交之地的交互形式，包括物质交互和能量交互等。比如脏腑之间，腑包括胃、大小肠、胆、膀胱等，都是空腔器官，属天，里面有较多气态物质；脏包括肝、心、脾、肺、肾，为实体器官，属地，相对而言气态物质比较少，固液态物质比较多。脏腑之间互为表里，有频繁的物质或能量的交互。
 
+一般我们谈气的时候，如果不特殊说明，指的是气态物质。
+
 > 黄帝曰：余闻天为阳，地为阴，日为阳，月为阴，其合之于人，奈何？岐伯曰：***腰以上为天*，腰以下为地**，
 >
 > 《黄帝内经-灵枢-阴阳系日月第四十一》
