--- a/ok/rm/rm03-0.2.0.0.0.md
+++ b/ok/rm/rm03-0.2.0.0.0.md
@@ -1,4 +1,4 @@
-## 3.2津液&
+## 3.2津液
 
 ### 1、津液的代谢过程：
 
@@ -14,7 +14,21 @@
 
 ![](img/%E6%B4%A5%E6%B6%B2%E4%BB%A3%E8%B0%A2.jpg)
 
+#### 水的吸收过程：
 
+水入胃后，偏清的一部分在脾的作用下以气雾的状态上升到肺。偏浊的一部分下降到小肠。
+
+进入小肠的水偏清的部分也通过脾上升到肺。偏浊的部分进入回肠、大肠，在此有一部分进入膀胱，剩余的随大便排出体外。
+
+#### 水的循环过程：
+
+肺为水之上源，类似一栋大楼的水塔，负责水的分配。此处的水偏清的部分通过肺的宣发作用，到达皮毛。这种宣发作用似乎是以气态的形式进行。偏浊的部分通过三焦散布到全身，此过程称为肃降。
+
+三焦为水液通道，类似大楼里的水管和水蒸气的通道。
+
+形体中的津液代谢后的形成浊水，浊水归于肾。肾类似废水处理厂，对浊水进行过滤，过滤后的浊水进入膀胱；过滤后的清水通过三焦水道又回到肺，通过肺进行再次分配。
+
+膀胱中的水在阳气作用下还进行一次清浊分离，清者上升到肺，浊者成为小便排出。
 
 #### 资料：
 
