--- a/ok/fjx/fjx16-0.5.0.0.0.md
+++ b/ok/fjx/fjx16-0.5.0.0.0.md
@@ -4,7 +4,7 @@
 
 〔煎服法〕以水约600亳升，入赭石、龙骨、牡蛎、龟板，煎约20分钟后，放入其余各药，煎至约200毫升，分温二次服下，早晚各一次。
 
-〔讲解〕本方证属类中风。此由肝肾阴亏，肝阳上亢，甚或肝风内动，气血逆乱并走于上所致。故治宜镇摄亢阳，滋养肝肾之法。方中重用牛膝引血下行，折其亢阳，并能滋养肝肾。《本草经疏》其言“走而能补，性善下行”。代赭石，其质重坠，能降气镇逆，并能平肝潜阳。龙骨、牡蛎潜阳降逆。上述四药合用，镇肝熄风、潜阳降逆，为急则治标之法；龟板、玄参、天门冬、白芍滋养阴液，补阴配阳，使阳足则能制阳，肝阳不亢，则肝风自熄，为治本之法。上述诸药合用镇肝潜阳，柔润熄风，标本同治。但肝为将军之官,性喜条达而恶抑郁，若单用重镇、滋润之品，则易影响其条达之性，不利于肝阳之平降,故方中又以茵陈、川楝子、麦芽三药清泄肝阳之余,条达肝气之郁滞，使肝气条达，疏泄正常，则阳亢自平。甘草调和诸药，与麦芽相伍，并能和胃调中以减少金石药物碍胃之弊。诸药合用，镇肝潜阳，柔润熄风；为标木同治之良方。
+〔讲解〕本方证属类中风。此由肝肾阴亏，肝阳上亢，甚或肝风内动，气血逆乱并走于上所致。故治宜镇摄亢阳，滋养肝肾之法。方中重用牛膝引血下行，折其亢阳，并能滋养肝肾。《本草经疏》其言“走而能补，性善下行”。代赭石，其质重坠，能降气镇逆，并能平肝潜阳。龙骨、牡蛎潜阳降逆。上述四药合用，镇肝熄风、潜阳降逆，为急则治标之法；龟板、玄参、天门冬、白芍滋养阴液，补阴配阳，使阳足则能制阳，肝阳不亢，则肝风自熄，为治本之法。上述诸药合用镇肝潜阳，柔润熄风，标本同治。但肝为将军之官,性喜条达而恶抑郁，若单用重镇、滋润之品，则易影响其条达之性，不利于肝阳之平降,故方中又以茵陈、川楝子、麦芽三药清泄肝阳之余,条达肝气之郁滞，使肝气条达，疏泄正常，则阳亢自平。甘草调和诸药，与麦芽相伍，并能和胃调中以减少金石药物碍胃之弊。诸药合用，镇肝潜阳，柔润熄风；为标本同治之良方。
 
 〔临证应用〕本方用于肝阳上亢，肝风内动所致的头目眩昏、目胀耳鸣，或脑中热痛，心中烦热，面色如醉、时常噫气，或肢体渐觉不利、口眼渐形歪斜，甚或眩晕颠仆，昏不知人，移时始醒，或醒后不能复原、脉弦长有力者。此方是治类中风的常用方，无论在中风前，中风时或中风后，凡肝阳化风者，均可使用。
 
