--- a/ok/rm/rm05.md
+++ b/ok/rm/rm05.md
@@ -56,7 +56,7 @@
 >
 > 《素问·生气通天论》
 
-> 阴精是阳气的物质基础，阳气要发挥应有的作用，需要阴精的支持，所以阴精要不断地输送精气于全身，以供给阳气的需要，这叫“阴者，藏精而起亟”。阳气对阴精有固摄作用，阴精要藏守于内，需要阳气固密于外，所以阳气要不、断敷布于体表，以抗御外邪，固密阴精，这叫“阳者，卫外而为固”
+> 阴精是阳气的物质基础，阳气要发挥应有的作用，需要阴精的支持，所以阴精要不断地输送精气于全身，以供给阳气的需要，这叫“阴者，藏精而起亟”。阳气对阴精有固摄作用，阴精要藏守于内，需要阳气固密于外，所以阳气要不断敷布于体表，以抗御外邪，固密阴精，这叫“阳者，卫外而为固”
 >
 > 《黄帝内经讲解-阴精与阳气的主要功能和关系》
 
