--- a/ok/rm/rm01.md
+++ b/ok/rm/rm01.md
@@ -104,13 +104,13 @@
 
 不该有的干扰平衡的因素叫邪实。原则上最好没有，如果有的话要控制在一个可接受的范围内，不要超过人的调节平衡能力，超过则发病。
 
-这里要注意的是，一定分清问题的虚实，再采取对应的补泻方法；如果判断错误，比如本来是有火的实热，误判成了虚寒，采取了补阳（增强暖气）的措施，就会火上浇油，让室温更加偏离平衡点。这会造成更严重的问题。
+这里要注意的是，一定分清虚实，再采取对应的补泻方法；如果判断错误，比如本来是有火的实热，误判成了虚寒，采取了补阳（增强暖气）的措施，就会火上浇油，让室温更加偏离平衡点。这会造成更严重的问题。
 
-所以一定不能让虚的更虚、实的更实，不能犯虚虚实实的错误，这是中医需要遵循的最基本原则。
+所以一定不能让虚的更虚、实的更实，不能犯虚虚实实的错误，这是中医需要遵循的最基本原则。很多不愿意系统学习的中医爱好者，在不能全面把握人体虚实状态的情况下，片面用药，造成严重后果的例子非常常见，大家要引以为戒！
 
 另外，在扶正祛邪过程中，扶正的方法往往会有留邪的隐患，祛邪的方法往往会伤正。所以无论是扶正还是祛邪，都要注意对应的负面作用。
 
-因所指的对象不同，所以虚实并不对立。单纯的正气虚或者邪气实往往只是疾病的初起阶段，病因单一，治疗相对简单。慢性病、老年病、严重疾病往往是正气虚与邪气实共存。解决这种问题要分清主次，确定先补还是先泻，或者重补轻泻、轻补重泻等等。
+因虚指正气不足，实指邪气过多，所以虚实两者并不对立，可以共存。单纯的正气虚或者邪气实往往只是疾病的初起阶段，病因单一，治疗相对简单。慢性病、老年病、严重疾病往往是正气虚与邪气实共存。解决这种问题要分清主次，确定先补还是先泻，或者重补轻泻、轻补重泻等等。
 
 > **无盛盛，无虚虚，而遗人天殃，无致邪，无失正，绝人长命**
 >
