--- a/ok/rm/rm03-0.6.0.0.0.md
+++ b/ok/rm/rm03-0.6.0.0.0.md
@@ -14,7 +14,7 @@
 
 ### 分类：
 
-分为先天之精和后天之精
+精分为先天之精和后天之精。通常情况下，我们说精的时候，指的是两者皆包括。如需特殊说明，需要明确指出是先天之精还是后天之精。
 
 > 肾所贮藏的生殖之精，来源于父母，亦称先天之精，《灵枢•本神》说：“故生之来谓之精。”即指此而言。
 >
