--- a/ok/qs/qs01_01.md
+++ b/ok/qs/qs01_01.md
@@ -458,7 +458,7 @@
 
 **萎**wěi，读尾，干枯。    **涸**  hé，读盒，枯竭。
 
-舌形紫晦如猪肝色，绝无津浓者为枯，舌形软缩，伸仲不过齿力萎，这都说明肝肾之阴干涸衰败，难治。若淡红光润鲜明者，是胃津干，急用甘凉濡润之药以救胃阴，如鲜生地、鲜石斛、蔗
+舌形紫晦如猪肝色，绝无津液者为枯，舌形软缩，伸不过齿为萎，这都说明肝肾之阴干涸衰败，难治。若淡红光润鲜明者，是胃津干，急用甘凉濡润之药以救胃阴，如鲜生地、鲜石斛、蔗
 浆、梨汁之类。
 
 以上论红绛舌苔。
@@ -469,7 +469,7 @@
 
 **弥**mí，读迷，更加。
 
-舌红苔黄周知邪已入里，若舌苔黑燥，扪之起刺，则阳明热极，然无痞满之症，不宜下而宜清，如清之不应，肠中燥屎与热邪固结，土燥水亏，胃液已干，急宜甘寒凉润以救胃阴，阴液充溢，二便自通，不可妄下。
+舌红苔黄固知邪已入里，若舌苔黑燥，扪之起刺，则阳明热极，然无痞满之症，不宜下而宜清，如清之不应，肠中燥屎与热邪固结，土燥水亏，胃液已干，急宜甘寒凉润以救胃阴，阴液充溢，二便自通，不可妄下。
 
 **22.黑滑太阴寒水侮，腹疼吐利理中宜；**
 
