--- a/ok/qs/qs01_01.md
+++ b/ok/qs/qs01_01.md
@@ -571,9 +571,9 @@
 
 **若得疹莎肌内透，再清痰火养阴安。**
 
-凡暑湿合邪，轻则气分微结，重则三焦俱病，淸解不应，即属湿温重证，肺气不得宣畅则酿成脓血，咯血是热伤肺络，不可用滋腻药，耳聋是湿蒙淸窍，不可作少阳治，治当急清三焦，气分一松，则疹痧得以外达，再议淸火淸痰，渐入养阴之品。
+凡暑湿合邪，轻则气分微结，重则三焦俱病，清解不应，即属湿温重证，肺气不得宣畅则酿成脓血，咯血是热伤肺络，不可用滋腻药，耳聋是湿蒙淸窍，不可作少阳治，治当急清三焦，气分一松，则疹痧得以外达，再议淸火淸痰，渐入养阴之品。
 
-此条闸明湿温重证的治法，惟恐人见咯血而误作阴虚治，见耳聋误作少阳治。
+此条阐明湿温重证的治法，惟恐人见咯血而误作阴虚治，见耳聋误作少阳治。
 
 **35.苔形粉白四边红，疫入膜原势最凶；**
 
