--- a/ok/rm/rm03-0.3.0.0.0.md
+++ b/ok/rm/rm03-0.3.0.0.0.md
@@ -1,6 +1,6 @@
 ## 3.3血
 
-血是在心肺的共同作用下，形成的具有濡养全身脏腑组织作用的赤色液态物质。
+血是在心肺的共同作用下，形成的具有濡养全身脏腑组织作用的赤色液态物质。其生成与功能概括为下图：
 
 
 
@@ -34,11 +34,11 @@ graph TB
 
 ```
 
-### 生成：
+### 1、生成：
 
 关于血的生成，中医认为是水谷精微与津液在肺化生为血。此外，精血互转，所以精也可以转化为血。
 
-人从外界吸收天气地气，最终形成皮肉筋骨，这个过程中，血是非常重要的一种中间状态，所以广义上皮肉筋骨等形体也属于“血类”。
+人从外界吸收天气地气，最终形成皮肉筋骨等形体组织。这个过程中，血是非常重要的一种中间状态，所以广义上皮肉筋骨等形体也属于“血类”。
 
 > 血液主要来源于水谷精微，而水谷精微的化生，有赖于脾胃的运化，所以说脾胃为气血生化之源。《灵枢·决气》说：“中焦受气取汁，变化而赤，是谓血”。就是说**中焦脾胃**所化生的精微物质是生成血的基本物质。
 >
@@ -64,13 +64,13 @@ graph TB
 >
 > 《黄帝内经讲解-人与自然- 精、气、津、液、血、脉的生成和功用》
 
-### 运行：
+### 2、运行：
 
-血的运行推动力以心气为主，肺气为辅助。脾气可以约束血在脉道中运行而不溢出脉外。
+血的运行推动力以心气为主，宗气为辅助。脾气可以约束血在脉道中运行而不溢出脉外。
 
 血与气相比，血为阴，有被动性；气为阳，有主动性。所以血的运行是由气推动的，如果气不足，则无力推动血的运行。
 
-另外，即使气的量充足，但是运行不正常，则血也不能正常运行。而气的运行是由肝的疏泄功能控制，所以肝的功能失常会影响气的运转，进而影响血的运转，形成气滞血瘀类的疾病。
+另外，即使气的量充足，但是运行不正常，则血也不能正常运行。而气的运行是由肝的疏泄功能控制，所以肝的功能失常会影响气的运转，进而影响血的运转，形成气滞血瘀等疾病。
 
 此外，肝可以藏血，并进行血量的调节。
 
@@ -102,7 +102,7 @@ graph TB
 >
 > 《黄帝内经讲解-藏象学说- 十二脏的生理功能及其相互关系》
 
-### 功能：
+### 3、功能：
 
 血中含有从饮食呼吸中获得的营养物质、水分、能源等。血在血管中运行，将各种资源送至四肢、头部、皮肉筋骨等部位，用来生长肌肉皮毛等形体。
 
