--- a/ok/rm/rm03-0.4.0.0.0.md
+++ b/ok/rm/rm03-0.4.0.0.0.md
@@ -1,8 +1,8 @@
 ## 3.5元气&
 
-### 人体的元气：
+### 1、人体的元气：
 
-#### 什么是元气？
+#### 1.1、什么是元气？
 
 元气，元为起始，气为能量。元气就是人体的起始能量，相当于自然界的阳光。人体的地气和天气是由元气派生出来的，也就是人体的固液物质的和气态物质的能量都是由元气传递而来。
 
@@ -42,7 +42,7 @@
 > 《难经-八难》
 >
 
-#### 元气是如何生成的？
+#### 1.2、元气是如何生成的？
 
 元气由精转化而成。精遍布全身，主要的精藏于五脏，尤其以肾为仓库。所以元气的产生也对应于精的分布，全身都可以产生，五脏产生的最重要，五脏中又尤其以肾为最多。
 
@@ -69,7 +69,7 @@
 > 《黄帝内经讲解-藏象-真气的生成和输布》
 >
 
-#### 元气如何传输到脏腑、全身
+#### 1.3、元气如何传输到脏腑、全身
 
 肾中元气产生后，是通过什么渠道进入脏腑全身的？这个问题中医典籍中的叙述不算特别多。
 
@@ -119,7 +119,7 @@
 >
 > 《中医药学概论-经络-第三节 奇经八脉》
 
-#### 元气在人体的分布
+#### 1.4、元气在人体的分布
 
 元气通过经络散布于全身。经络是经脉和络脉的总称。经有路径的含义，经脉贯通上下，沟通内外，是经络系统中的主干；络，有网络的含义，络脉是经脉别出的分支，较经脉细小，纵横交错，遍布全身。其具体分布的内容比较多，可参阅光明中医教材《针灸学-经络、腧穴》部分内容
 
@@ -254,9 +254,9 @@
 > 《黄帝内经讲解-第七章病证学说-二、伤寒类-证候》
 >
 
-### 其它（探讨）
+### 2、其它（探讨）
 
-#### 元气是否是气态物质？
+#### 2.1、元气是否是气态物质？
 
 元气是人体的初始动力，是能量来源。自然界的初始动力来自光照，烧水过程的初始动力来自木材燃烧的火焰。所以不同事物的初始动力的形式有所不同，共同特点是都能提供能量。人体的能量按照现代科学的研究是来自有机物的化学能。中医中的元气是人体的起始能量，其形式是到底气态、电、热辐射或者其它某种未知的能量形式还不确定，因此为了体现其初始能量的独特特性，将其单独介绍。
 
@@ -264,7 +264,7 @@
 >
 > 《黄帝内经讲解-阴阳五行学说-阳气的重要性》
 
-#### 气血在身体中的分配：
+#### 2.2、气血在身体中的分配：
 
  气的分配按照三阴三阳在身体中进行配置，按照内经所说：
 
@@ -289,9 +289,9 @@
 
 
 
-#### 三阴三阳的开阖问题：
+#### 2.3、三阴三阳的开阖问题：
 
-内经中关于开阖枢的问题是一个中医中还没有得各方明确的概念，这里引教材中的相关叙述供参考。
+中医中对于开阖枢的问题解释还不够清晰，大体上指人体精、气、血等要素在人体的升降出入流转过程中，三阴三阳各自起到特殊作用。这里引教材中的相关叙述供参考。
 
 > “太阳为开”，是指太阳为三阳之表，敷布阳气于全身，主司人体卫外功能，所以叫做“开”，
 >
