--- a/ok/rm/rm03-0.5.0.0.0.md
+++ b/ok/rm/rm03-0.5.0.0.0.md
@@ -18,11 +18,11 @@
 
 下面分别介绍人体的天气和地气。
 
-### 人体天气
+### 1、人体天气
 
-人体的天气指的是人体中的气态物质，包括吸入的空气、体内水蒸汽、气雾状态的营养物质等等。从功能上主要分为以下几种：宗气、营气、卫气
+人体的天气指的是人体中的气态物质，以水蒸汽和气雾状营养物质的形态，存在于经络、腠理以及各种空腔器官、孔窍等处。从功能上主要分为以下几种：宗气、营气、卫气、脏腑之气
 
-#### 宗气
+#### 1.1、宗气
 
 ##### 形成：
 
@@ -80,7 +80,7 @@
 >
 > 《黄帝内经讲解-藏象-宗气的生成和功用》
 
-#### 营气
+#### 1.2、营气
 
 ##### 产生
 
@@ -120,7 +120,7 @@
 >
 > 《黄帝内经讲解-藏象- *营*卫的生成和功能》
 
-#### 卫气
+#### 1.3、卫气
 
 ##### 产生:
 
@@ -164,6 +164,18 @@
 >
 > 《黄帝内经讲解-藏象-营卫的生成》
 
+卫气正常情况下循以上道路运转，但特殊情况下，可以不遵循这个道路。比如内经说人饮食热的水谷，有时会立刻出汗，位置在面部、背部或者半身，这是因为卫气彪悍，在腠理开关不正常的情况下，遇到出口就会走出。
+
+> 黄帝曰：人有热饮食下胃，其气未定，汗则出，或出于面，或出于背，或出于身半，其不循卫气之道而出，何也？歧伯曰：此外伤于风，内开腠理，毛蒸理泄，卫气走之，固不得循其道。”此气慓悍滑疾，见开而出，故不得从其道，故命曰漏泄。
+>
+> 《灵枢-营卫生会》
+
+由此可见，气态物质正常情况下，沿经络行走。但特殊情况下，也可以走其它道路，或者以弥漫渗透的方式穿过形体组织。在《中医儿科学》的小儿哮喘病中，谈到此病的病根为肺中伏痰，但过食冷、酸、咸的食物会诱发，就是因为小儿器官娇嫩，冷酸等气态物质浸入肺腑而发病。
+
+> 小儿**肺脏娇嫩**，治节失司；脾气虚弱，运化无权；肾阳不振，失于蒸化，酿生痰湿内停，留伏肺俞，是为潜在内因；而气候变化，寒暖失常，感受六淫；饮食不当，或**过食生冷酸咸**；以及吸入花粉、绒毛、灰尘，接触油漆、煤气、刺激性气体；甚至啼哭呛乳，均乃诱发哮喘的外来因素。故本病虽发作于肺，而又与脾肾二脏有关。
+>
+> 《中医儿科学-哮喘》
+
 ##### 功能：
 
 > 卫气的功能有三个方面：
@@ -178,9 +190,11 @@
 >
 > 《中医药学概论-藏象-气》
 
+#### 1.4、脏腑之气
 
+五脏六腑各有其对应的气态物质，详见下面的地气部分。
 
-#### 气的调节：
+#### 1.5、气的调节：
 
 全身气的升降出入活动是在肝的调节下进行，肝主疏泄即为此意。若肝的疏泄功能失常，则可能出现气的上逆，产生头目胀痛，面红目赤，心烦易怒的现象；或者气的运转产生淤滞，进而影响血和津液的运行，产生气滞血瘀痰饮的现象，妇女可以产生经行不畅、痛经等现象。肝的疏泄功能也管理脾胃的气机升降，若出现异常，对于脾可能出现腹胀、肠鸣、泄泻等脾气不升的症状，对于胃可能出现胃脘作痛，嗳气不舒，恶心呕吐的胃气不降的症状。
 
@@ -192,11 +206,17 @@
 
 从能量角度看，人体天气也应有风、热、暑、湿、燥、寒六气。人体的天气如果受自然界六气影响过大，可造成人体天气失衡发病，因此中医病因中有外感六淫之说，淫即太过之意。反过来理解，此六气如果不过量，则对健康的人体并无害处。
 
-### 人体地气
+### 2、人体地气
 
-从物质角度看，人的血、津液中含有空气中传入的氧等物质，这是阴中之阳。
+#### 2.1、概述
 
-从能量角度看，人体的形质、血、津液等也是按照五行划分，这部分是中医的重要内容。
+人体地气指人体的固液态物质，包括脏腑、皮肉筋骨、津液、血等。这些固液态物质与前面的气态物质进行物质和能量交互，类似自然界天地气交、云升雨降的过程。
+
+从物质角度看，人的血、津液中含有空气中传入的氧等物质。人体的营卫等气态物质是饮食而入的固液态物质转化而成。
+
+从能量角度看，人体的形质也是按照五行划分，代表不同部分的能量差异。
+
+#### 2.2、脏腑五行
 
 脏腑作为人体最重要的器官，按照五行划分如下：
 
@@ -220,13 +240,9 @@
 >
 > 《素问•五藏别论篇第十一》
 
-五脏之间具有气的平衡机制，参考前面“天地自然”章节的五行内容。人体的五行脏气分布是肝气左升、肺气右降，心气浮于上，肾气沉于下，脾在中间。
+五行之间需要维持平衡，即五脏各脏的能力应保持相对均衡，这种均衡是通过五行生克、乘侮、胜复来保持的。具体见《概论》的五行章节。
 
-> 《素问•阴阳应象大论》说：“左右者，阴阳之道路也。”左右是阴阳升降的道路，左升右降。肝主春，其气从左而升，左为肝气分布的部位。故肝病多见于左。肺主秋，其气从右而降，右为肺气分布的部位，故肺病每见于右。如《难经•五十六难》说：“肝之积名曰肥气，在左胁下……肺之积名曰息贲，在右胁下。”所以临证积见于左者，多治肝血；生于右者，多治肺气。
->
-> 《黄帝内经讲解-脏气的分布》
-
-五行之间平衡是中医中非常重要的内容。五脏各脏的能力应保持相对均衡，如《难经》所说，若肝肾之气已绝，反而补心肺，则造成更大的不平衡，会让虚的更虚，实的更实。若病人因此而亡，是医生的责任。
+五行的平衡非常重要，不重视这种平衡关系，很容易犯前面所说的虚虚实实之戒。如《难经》所说，若肝肾之气已绝，反而补心肺，则造成更大的不平衡，会让虚的更虚，实的更实。若病人因此而亡，是医生的责任。
 
 > 五脏脉已绝于内者，肾肝气已绝于内也，而医反补其心肺；五脏脉已绝于外者，心肺气已绝于外也，而医反补其肾肝。阳绝补阴，阴绝补阳，是谓实实虚虚，损不足而益有余。如此死者，医杀之耳。
 >
@@ -242,11 +258,27 @@
 >
 > 《黄帝内经讲解-藏象学说-五行气运具有维持自然平衡的作用》
 
+#### 2.3、脏腑之气
 
+脏腑之气是脏腑所对应的气态物质。人体的五行脏气分布是肝气左升、肺气右降，心气浮于上，肾气沉于下，脾在中间。这种分布对均衡人体上下部气血有重要作用，若出现问题，可以导致气机升降的问题，出现上实下虚或者下实上虚等分布不均的问题。
+
+> 《素问•阴阳应象大论》说：“左右者，阴阳之道路也。”左右是阴阳升降的道路，左升右降。肝主春，其气从左而升，左为肝气分布的部位。故肝病多见于左。肺主秋，其气从右而降，右为肺气分布的部位，故肺病每见于右。如《难经•五十六难》说：“肝之积名曰肥气，在左胁下……肺之积名曰息贲，在右胁下。”所以临证积见于左者，多治肝血；生于右者，多治肺气。
+>
+> 《黄帝内经讲解-脏气的分布》
+
+五脏之气通过经络通于面部，使人的面部呈现出健康的色泽。因此中医望诊通过观察面部的色泽了解脏腑的状态。
+
+> **1.天有五气，食人入鼻，藏于五脏，上华面颐，**
+>
+> **肝青心赤，脾脏色黄，肺白肾黑，五脏之常。**
+>
+> 《中医诊法-中药-方剂口诀--望诊》
+
+#### 2.4、五行对应
 
 前面“阴阳平衡”章节提到取类比象的问题，就是对阴阳平衡起到同样作用、或具有强对应关系的事物可以归为一类，叫做具有相同的象。对于按照五行划分的地气平衡来说，很多事物都有五行之象。列表如下：
 
-#### 五行与人体器官、功能的对应关系
+##### 五行与人体器官、功能的对应关系
 
 | 五行 | 五脏 | 五腑 | 经脉     | 五官 | 五体  | 五华 | 五液 | 五声 |
 | ---- | ---- | ---- | -------- | ---- | ----- | ---- | ---- | ---- |
@@ -258,7 +290,7 @@
 
 
 
-#### 可对人体五行产生影响的一些因素
+##### 可对人体五行产生影响的一些因素
 
 | 五行 | 五味 | 五色 | 五音 | 五气 | 五季 | 五方 |
 | ---- | ---- | ---- | ---- | ---- | ---- | ---- |
@@ -268,7 +300,7 @@
 | 金   | 辛   | 白   | 商   | 燥   | 秋   | 西   |
 | 水   | 咸   | 黑   | 羽   | 寒   | 冬   | 北   |
 
-#### 其它五行相关内容
+##### 其它五行相关内容
 
 | 五行 | 五化 | 五脉     |
 | ---- | ---- | -------- |
