--- a/ok/rm/rm03-0.7.0.0.0.md
+++ b/ok/rm/rm03-0.7.0.0.0.md
@@ -255,7 +255,7 @@
 
 人经常要外感风寒、内伤七情，但是并不一定会发病，这是因为人有很强大的自我调节能力。只有遇到超出自身调节能力的情况时，才会发病。
 
-发病要请医生，医生准确分析了是哪个房间出现了什么问题，也就是确定病位、病性，通过汤药、针灸扶正祛邪，让房间恢复平衡。这就是治疗。
+发病要请医生，医生准确分析了是哪个房间出现了什么问题，也就是确定病位、病性，通过汤药、针灸扶正祛邪，让房间恢复平衡。这就是治疗。其实，此时医生起到的是神的作用，即调节气血的分配，使其恢复平衡。
 
 
 
@@ -396,7 +396,7 @@
 
 > *余闻上古有真人者，提挈天地，把握阴阳，呼吸精气，**独立守神**，肌肉若一，故能寿敝天地，无有终时，此其道生*
 >
-> *今时之人不然也，以酒为浆，以妄为常，醉以入房，以欲竭其精，以耗散其真，不知持满，**不时御神**，务快其心，逆于生乐，起居无节，故半百而衰也。*
+> 今时之人不然也，以酒为浆，以妄为常，醉以入房，以欲竭其精，以耗散其真，不知持满，**不时御神**，务快其心，逆于生乐，起居无节，故半百而衰也。
 >
 > 《黄帝内经》
 >
